--- a/2-3主要实体法-第二节 行政法-四、行政复议.md
+++ b/2-3主要实体法-第二节 行政法-四、行政复议.md
@@ -103,11 +103,26 @@
     D:可以向该部门的本机人民政府或者上一级的主管部门申请行政复议
 
 
+##### jc91村民胡某经常聚众赌博，被乡派出所处200元的罚款，胡某对派出所的行为不服，下列说法不正确的是（D）
+    A:胡某应当首先申请行政复议，既可以向乡政府申请，也可以向县公安局申请
+    B:先向县公安局申请申请行政复议，对复议不服，在提请诉讼
+    C:先向市公安局申请申请行政复议，对复议不服，在提请诉讼
+    D:可以直接向人民法院起诉
+    
+    诉讼和复议的自由选择：
+        1.同时诉讼和复议，先受理的管辖。同时受理的当事人选择其一
+        2.大多数案件可以在收到复议决定或者复议期满后15日内起诉，有例外从例外
+        3.原则上只能申请复议一次
+        4.已经起诉的不得申请复议，已经复议的，复议期间不能起诉
 
-
-
-
-
+##### jc93关于行政诉讼方位和行政复议范围关系的表述，正确的是（B）
+    A:能提起复议的具体行政行为，也一定能提起行政诉讼
+    B:能提起行政诉讼的具体行政行为，也一定能提起复议
+    C:有些案件只能提起行政诉讼，有些案件只能提起行政复议
+    D:两者范围相同
+    
+    行政复议：具体行政行为+附带部分抽象
+    行政诉讼：具体行政行为
 
 
 
