--- a/2-4第四章 主要程序法-第一节 刑事诉讼法-五、刑事诉讼的基本程序.md
+++ b/2-4第四章 主要程序法-第一节 刑事诉讼法-五、刑事诉讼的基本程序.md
@@ -45,58 +45,22 @@
         自诉的提起，【不能超过上述范围】。
 
 ### （三）审判
-1.第一审程序
+### 1.第一审程序
     第一审程序是指依据审判管辖的规定，对于人民检察院提起的公诉或者自诉人提起的自
-    诉的刑事案件进行初次审理并且作出裁判的程序。内容包括审查、开庭审判等。第一审程序
-    可以分为第一审普通程序和第一审简易程序，第一审普通程序是最主要、也是最常用的程序。
+    诉的刑事案件进行初次审理并且作出裁判的程序。内容包括审查、开庭审判等。
+    第一审程序可以分为第一审普通程序和第一审简易程序，第一审普通程序是最主要、也是最常用的程序。
     适用第一审普通程序审理的案件，应当在受理后 1 个月内审结，至迟不得超过 1 个半月，
     符合法定条件的特殊案件，经过高级人民法院批准或者决定，可以再延长 1 个月。第一审简
     易程序则是普通程序的简化，适用第一审简易程序审理的案件，应当在受理后 20 曰内审结。
-2.第二审程序
+    
+### 2.第二审程序
     第二审程序指人民法院对上诉、抗诉案件进行审理【并且作出裁判的程序】。对第一审刑事
     判决的上诉、抗诉期限是 10 日，对第一审刑事裁定的上诉、抗诉期限是 5 日。适用第二审
     程序理的案件，应当在受理后 1 个月内审结，至迟不得超过 1 个半月，符合法定条件的特殊
     案件，经过高级人民法院批准或者决定，可以再延长 1 个月。
-3.死刑复核程序
-死刑复核程序，有核准权的人民法院对已经判处死刑的案件进行复査核准应遵循的一种
-特别审判程序。
-死刑复核程序的特征：
-    ①审理对象特定；
-    ②是死刑案件的终审程序；
-    ③核准权具有专属性；
-    ④【程序启动上具有自动性】只要是死刑就要启动，自动启动；
-    ⑤【报请复核方式特殊】。
-死刑复核程序是【一个独立诉讼阶段，有自己的特定诉讼任务】，其核心是【纠正错误判决】，维护正确判决，保证死刑判决的质量。
-死刑复核程序的意义：
-    ①有助于严格控制死刑的适用；
-    ②有助于防止错杀；
-    ③有助于保证死刑案件的承办质量。
-4.审判监督程序
-审判监督程序是指对已经发生法律效力的判决或者裁定，发现在认定事实上或者使用法
-律上确有错误的，依法进行重新审判的程序。该程序是特别程序，它不是每一个案件必经的
-程序，【只对已经生效但又确有错误的判决或裁定案件适用】。
-审判监督程序的特征：
-    ①审理对象是已经发生法律效力的【裁判】；
-    ②由各级人民法院院长提交【本院审判委员会】决定，
-   【最高人民法院和上级人民法院决定】以及【最高人民检察院】提出抗诉而提起的。
-    ③必须经有权的人民法院或者人民检察院审查，认为已生效的判决、裁定在认定
-    事实或者适用法律上确有错误时，才能提起；
-    ④【审判法院既可以是原审人民法院，也可以是提审的任何上级人民法院】；
-    ⑤按照审判监督程序审判案件将根据原来是第一审案件或第二审
-    案件而分别依照第一审程序和第二审程序进行；
-    ⑥具有特定情形的，【再审不得加重原审被告人的刑罚】。
     
-### （四）执行
-刑事诉讼中的执行，是指将人民法院巳经发生法律效力的【刑事判决、裁定】所确定的内容付诸实现的活动。
-执行的意义在于：
-    ①可以使被判刑罚的犯罪分子及时得到应有的制裁；
-    ②可以使不应遭受刑事追诉的无辜者及时得到保障；
-    ③可以体现诉讼活动的【教育功能和作用】。
-
-执行的种类：
-    ①死刑立即执行判决的执行；
-    ②死缓、无期徒刑、有期徒刑、拘役判决的执行；
-    ③徒刑缓刑、拘役缓刑的执行；
-    ④管制、剥夺政治权利判决的执行；
-    ⑤罚金、没收财产判决的执行程序；
-    ⑥【无罪、免除刑事处罚判决】的执行程序。
+##### jc89 在刑事诉讼过程中，第二审人民法院受理上诉案件，一般在（B）内审结
+    A:一个月
+    B:二个月（2+2+x）
+    C:三个月
+    D:六个月
