--- a/2-4第四章 主要程序法-第三节 民事诉讼法-三、民事诉讼的审判程序.md
+++ b/2-4第四章 主要程序法-第三节 民事诉讼法-三、民事诉讼的审判程序.md
@@ -13,9 +13,9 @@
         起诉时，【原告必须是与本案有直接利害关系】的公民、法人或其他组织，
         要有明确的被告和具体的诉讼请求，案件属于人民法院的受案范围。
         起诉以【书面起诉为原则，以口头起诉为例外】。人民法院对起诉审查后，针对不同的情况作出不同的处理：
-            认为符合法定起诉条件的，应当在 7 曰内立案并通知当事人；
-            认为不符合法定起诉条件的，应当在 7日内裁定不予受理，原告不予受理裁定不服的，可以上诉；
-            对于应当提起行政诉讼或通过仲裁解决的案件，告知当事人。
+        认为符合法定起诉条件的，应当在 7 曰内立案并通知当事人；
+        认为不符合法定起诉条件的，应当在 7日内裁定不予受理，原告不予受理裁定不服的，可以上诉；
+        对于应当提起行政诉讼或通过仲裁解决的案件，告知当事人。
             
     ②审理前的准备包括：
         人民法院应在立案之日起 5 日内将起诉状副本送达被告，
@@ -34,7 +34,9 @@
         在上述期限内还未审结，需要延长的，则由法院报请上级法院批准，延长的期限，由上级法院决定。
     
 ### 2.简易程序
-    民事诉讼的简易程序是指【基层人民法院及其派出法庭审理民事案件】和【简单经济纠纷案】件适用的程序。
+    民事诉讼的简易程序是指【基层人民法院及其派出法庭审理民事案件】和
+        【简单经济纠纷案】件适用的程序。
+        
     它是【独立于普通程序的一种民事诉讼程序】，内容较普通程序简单，【是普通程序的简缩】。
     
     这一程序``只能``由基层人民法院及其派出法庭审理第一审民事案件时适用，
@@ -61,6 +63,22 @@
     B:一个月
     C:一个半月（有期徒刑3年及以上的）
     D:三个月
+
+
+##### jc9我国民事诉讼规定，当事人不服地方人民法院第一审裁定的上诉期限是（C）天
+    A:20
+    B:15
+    C:10
+    D:5
+
+##### jc100下列有关我国民事诉讼法规定的审理期限，错误的是（D）
+    A:适用普通程序审理的案件，应当在立案之日起6个月内审结
+    B:适用普通程序审理的案件，有特殊情况需要延长的，经本院院长批准，可以延长6个月
+    C:适用简易程序审理的案件，应当在立案之日起3个月内审结
+    D:适用简易程序审理的案件，经本院院长批准，可以适当延长
+    
+    简易程序不得延长！
+    
 
 
 ### （二）第二审程序
