'法律多选题'

--- a/2-1法理学-一、法的概念和基本特征.md
+++ b/2-1法理学-一、法的概念和基本特征.md
@@ -52,3 +52,9 @@
     B．法的规范性
     C．法的合法性
     D．法的强制性    
+
+##### jcd5法的规范性具体体现在（ABC）
+    A:法对人们【如何行为提出了明确的指示】；
+    B:法的内容具有【一般性和概括性】
+    C:其生效期间法能够反复适用
+    D:法的权利和义务相对应    
