--- a/2-1法理学-三、法律关系.md
+++ b/2-1法理学-三、法律关系.md
@@ -26,6 +26,19 @@
     是法律关系的主体和客体共同指向的对象。法律关系的客体种类有四
     种：物、行为、智力成果和人身利益。
 
+##### jcd6在我国法律关系的主体有（ABCD）
+    A:国家
+    B:自然人
+    C:法人
+    D:个体工商户
+    
+    法律关系的主体:
+        自然人和法人：
+        自然人：个体工商户，农村承包经营户，个体合伙
+        国家是特殊的法人。在民事中，国家也可以是法律关系主体
+
+
+
 ## （四）法律关系内容——权利和义务
 ### 1.权利和义务的概念
         权利是指法律对权利主体作出或不作出一定行为的【许可与保障】。
