--- a/法律题-2.md
+++ b/法律题-2.md
@@ -100,6 +100,36 @@
     行政机关具有双重身份：行政主体和民事主体。当行政机关以民事主体身份签订的合同，如与家具厂签订的购买办公设备合同，该合同是民事合同；
     只有当行政机关以行政主体身份签订合同时，该合同才是行政合同。
     
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
          
          
 ##### jc71（C）属于消费税的征收范围
@@ -108,19 +138,167 @@
     C:小轿车
     D:卡丁车
          
-##### 
-    A:
-    B:
-    C:
-    D:
-         
-##### 
-    A:
-    B:
-    C:
-    D:
- 
 
+        
+    
+##### jcd7我国的法律关系客体（）
+    A:物
+    B:行为
+    C:智力成果
+    D:人身利益
+    
+##### jcd8对法律权利和义务，从其存在的形态可划分为（）
+    A:国家权利和义务
+    B:法定权利和义务
+    C:个体权利和义务
+    D:习惯权利和义务
+    
+##### jcd9（）只能制定法律
+    A:诉讼和仲裁制度
+    B:海关的基本制度
+    C:基层群众自治制度
+    D:对非过偶财产的征收
+    
+##### jcd10与立法，司法向比较，执法（）的特征
+    A:主动性
+    B:具体性
+    C:权威性
+    D:单方性
+    
+##### jcd11影响法律效力层次的因素有（）
+    A:制定主体
+    B:适用范围
+    C:制定事件
+    D:制定程序
+    
+##### jcd12了解，研究法的渊源问题有助于（）
+    A:解决什么样的国家机关有权产生什么形式法的问题
+    B:明确哪些法的效力高些，什么样的法具有最高的效力
+    C:立法者采取适当法的形式调整一定的社会关系
+    D:明了我国司法机关的办案依据主要有哪些
+    
+##### jcd13 我国法的渊源主要包括（）
+    A:单行条例
+    B:行政规章
+    C:国家政策
+    D:国际条约
+    
+##### jcd14法律责任的功能包括（）
+    A:惩罚功能
+    B:救济功能
+    C:预防功能
+    D:评价功能
+    
+##### jcd15法律责任的特点包括（）
+    A:以法律义务存在为前提
+    B:表示为一种责任方式，要承担不利后果
+    C:具有内在逻辑性，即存在前因与后果的逻辑关系
+    D:法律责任的追究由国家强制力实施或者潜在保证的
+    
+##### jcd16（）是法律责任产生的原因
+    A:犯罪行为
+    B:一般侵权行为
+    C:违反合同约定
+    D:法律规定
+    
+##### jcd17法律责任的免除包括（）
+    A:立功免责
+    B:时效免责
+    C:补救免责
+    D:不诉及免责
+    
+##### jcd18刑事责任主要是（）
+    A:一种救济责任
+    B:一种惩罚责任
+    C:一种个人责任
+    D:向国家所负的责任
+
+
+##### jcd19宪法的阶级本质主要体现在（）
+    A:宪法是阶级斗争的结果和总结
+    B:宪法是统治阶级意志的集中表现
+    C:显示是统治阶级利益的集中表现
+    D:宪法随着政治力量对比关系的变化而变化
+
+##### jcd20我国宪法的原则包括（）
+    A:人民主权原则
+    B:基本人权原则
+    C:法治原则
+    D:权力制约原则
+
+##### jcd21我国宪法的渊源形式主要有（）
+    A:宪法典及修正案
+    B:宪法性文件
+    C:宪法惯例
+    D:国际条约
+
+##### jcd22决定和影响国家结构形式的因素包括（）
+    A:经济因素
+    B:地理因素
+    C:民族因素
+    D:历史因素
+
+##### jcd23人权通常分为三个阶段，第三阶段的人权主要是从二战后反殖民主义的民族解放运动中产生和发展起来的。其内容包括（）
+    A:民族自决权
+    B:公正审判权
+    C:和平权，发展权
+    D:自然资源永久主权
+
+
+##### jcd24我国公民的基本权利有（）
+    A:社会经济权利
+    B:文化教育权利
+    C:人身权利
+    D:平等权
+
+##### jcd25公民的人身自由不受侵犯是指（）
+    A:公民不受非法逮捕，拘禁
+    B:不被非法布偶多，限制自由
+    C:公民住宅不受侵犯
+    D:不受非法搜查身体
+
+
+
+##### jcd26我国公民服兵役的形式包括（）
+    A:承担优抚费
+    B:服预备役
+    C:参加军训
+    D:服现役
+
+##### jcd27可以向全国人大提出法案的有（）
+    A:一个代表团
+    B:最高人民法院
+    C:二十名全国人民代表联名
+    D:全国人民代表大会民族委员会
+
+##### jcd28 2004年3月第四次修改宪法，此次通过的修正案（）
+    A:将政治文明写入宪法
+    B:完善了土地征用和补偿制度
+    C:增加了建立和健全社会保障制度的规定
+    D:确立依法治国，建设社会主义法治国家的基本治国方略
+
+##### jcd29刑法区别于其他法律的特征，主要表现在（）
+    A:广泛性
+    B:严厉性
+    C:特定性
+    D:法定性
+
+##### jcd30贪污罪的主体可能有（）
+    A:国家工作人员
+    B:集体经济组织的工作人员
+    C:中外合资企业中的外方管理人员
+    D:受企业委托管理国有财产的人员
+
+##### jcd
+    A:
+    B:
+    C:
+    D:
+
+
+
+
+    
 
       
 A:
