--- a/2-1法理学-一、法律责任.md
+++ b/2-1法理学-一、法律责任.md
@@ -15,6 +15,7 @@
     2.法律责任的产生原因。除了违法行为以外，主要还有违约行为，即违反合同约定，没
     有履行一定法律关系中作为的义务或不作为的义务。
     违约行为是产生民事法律责任的重要原因。
+    
     其次是法律规定，主要是指法律上规定的无过错责任或叫严格责任，
     即仅仅由于出现了法律所规定的法律事实，就要承担某种赔偿责任，如高度危险作业致人损害。
 
@@ -119,9 +120,38 @@
 ##### 违宪责任是所有法律责任中最严厉的一种（×）
     刑事责任要命的，是最严厉
 
+    
+##### jcd14法律责任的功能包括（ABC）
+    A:惩罚功能
+    B:救济功能
+    C:预防功能
+    D:评价功能
+    
+##### jcd15法律责任的特点包括（ABCD）
+    A:以法律义务存在为前提
+    B:表示为一种责任方式，要承担不利后果
+    C:具有内在逻辑性，即存在前因与后果的逻辑关系
+    D:法律责任的追究由国家强制力实施或者潜在保证的
 
-
-
+##### jcd16（ABCD）是法律责任产生的原因
+    A:犯罪行为
+    B:一般侵权行为
+    C:违反合同约定
+    D:法律规定
+    
+##### jcd17法律责任的免除包括（ABCD）
+    A:立功免责
+    B:时效免责
+    C:补救免责
+    D:不诉及免责
+    
+##### jcd18刑事责任主要是（BCD）
+    A:一种救济责任
+    B:一种惩罚责任
+    C:一种个人责任
+    D:向国家所负的责任
+    
+    民事责任才是救济责任！
 
 
 
