--- a/2-1法理学-三、法律关系.md
+++ b/2-1法理学-三、法律关系.md
@@ -36,6 +36,13 @@
         自然人和法人：
         自然人：个体工商户，农村承包经营户，个体合伙
         国家是特殊的法人。在民事中，国家也可以是法律关系主体
+        
+        
+##### jcd7我国的法律关系客体（ABCD）
+    A:物
+    B:行为
+    C:智力成果
+    D:人身利益        
 
 
 
