--- a/2-1法理学-二、执法.md
+++ b/2-1法理学-二、执法.md
@@ -46,3 +46,18 @@
 
     我们并不是靠执法来维持国家的收入啊！
     ###（三）执法的原则
+
+##### jcd10与立法，司法向比较，执法（ABD）的特征
+    A:主动性
+    B:具体性
+    C:权威性
+    D:单方性
+
+
+
+
+
+
+
+
+    
