--- a/2-1法理学-六、法的效力.md
+++ b/2-1法理学-六、法的效力.md
@@ -50,3 +50,14 @@
     第二，外国人（包括无国籍人）在我国领域内除法律有特别规定的（如享有外交特权和豁免权的人）以外，也都适用我国法律。（属地管辖）
     第三，我国公民在我国领域以外，原则上也应该适用我国法律，法律有特别规定的按法律规定。（属人管辖）
     第四，外国人在我国领域外，如果侵害了我国国家或公民的权益或者与我国公民、法人和其他组织发生法律交往关系，也可以适用我国法律。（保护管辖）
+
+
+##### jcd11影响法律效力层次的因素有（ABCD）？？
+    A:制定主体
+    B:适用范围
+    C:制定事件
+    D:制定程序
+
+
+
+    
