--- a/2-1法理学-四、法的渊源.md
+++ b/2-1法理学-四、法的渊源.md
@@ -93,3 +93,17 @@
     C:法规  法规是正式渊源。
     D:判例
     法的正式渊源：【宪法行地自章国】
+
+
+    
+##### jcd12了解，研究法的渊源问题有助于（ABCD）
+    A:解决什么样的国家机关有权产生什么形式法的问题
+    B:明确哪些法的效力高些，什么样的法具有最高的效力
+    C:立法者采取适当法的形式调整一定的社会关系
+    D:明了我国司法机关的办案依据主要有哪些
+    
+##### jcd13 我国法的渊源主要包括（ABD）
+    A:单行条例
+    B:行政规章
+    C:国家政策
+    D:国际条约    
