--- a/2-2宪法-宪法的基本原则.md
+++ b/2-2宪法-宪法的基本原则.md
@@ -32,3 +32,9 @@
     D.权力制约原则
 
 ##### 权力制约原则体现在两个方面：1.公民权利对国家权力的制约，2.国家权力对公民权利的制约（×）
+
+##### jcd20我国宪法的原则包括（）
+    A:人民主权原则
+    B:基本人权原则
+    C:法治原则
+    D:权力制约原则
