--- a/2-2宪法-第四节 我国的国家机构.md
+++ b/2-2宪法-第四节 我国的国家机构.md
@@ -5,8 +5,7 @@
 ###（一）全国人民代表大会
 ### 1.全国人民代表大会的性质、组成
     全国人民代表大会是最高国家权力机关，
-    又是行使国家立法权的机关，
-    这就决定了全国人民代表大会在整个国家机关体系中居于最高的地位。
+    又是行使国家立法权的机关，这就决定了全国人民代表大会在整个国家机关体系中居于最高的地位。
     全国人民代表大会由省、自治区、直辖市和``军队``选出的代表组成，各少数民族都应当有适当的名额。
     
 ### 2.全国人民代表大会的主要职权
@@ -218,13 +217,18 @@
 
 
 
-==================================================================================
+### ==================================================================================
 ### 宪法解释和监督：
     由立法机关解释，该模式起源于英国，我国也采该模式，
     由全国人大常委会对《宪法》进行解释。
     【全国人大和全国人大常委会负责监督宪法的实施】
 
 
+##### jcd22决定和影响国家结构形式的因素包括（ABCD）
+    A:经济因素
+    B:地理因素
+    C:民族因素
+    D:历史因素
 
 
 
