--- a/2-3主要实体法-第一节 刑法-一、刑法的概念及原则，特征.md
+++ b/2-3主要实体法-第一节 刑法-一、刑法的概念及原则，特征.md
@@ -5,6 +5,12 @@
         刑法是以【国家名义】规定什么行为是犯罪，并处以罪犯何种刑事处罚的法律。
         刑法的特征：1.特定性；2.广泛性；3.严厉性；4.补充性；5.保障性
 
+##### jcd29刑法区别于其他法律的特征，主要表现在（ABC）
+    A:广泛性
+    B:严厉性
+    C:特定性
+    D:法定性        
+
 
 ### （二）刑法的基本原则
     1.罪刑法定原则。
