--- a/2-3主要实体法-第一节 刑法-五、基本犯罪类型和职务犯罪.md
+++ b/2-3主要实体法-第一节 刑法-五、基本犯罪类型和职务犯罪.md
@@ -19,6 +19,12 @@
     非法占有公共财物的行为。另外，受国家机关、国有公司、企业、事业单位、人民团体委托
     管理、经营国有财产的人员，利用职务上的便利，侵吞、窃取、骗取或者以其他手段非法占
     有国有财物的，以贪污罪论。
+
+##### jcd30贪污罪的主体可能有（AD）
+    A:国家工作人员
+    B:集体经济组织的工作人员
+    C:中外合资企业中的外方管理人员
+    D:受企业委托管理国有财产的人员    
     
 ###（2）挪用公款罪。【个人非法，较大的三个月营利】
 
