--- a/2-1法理学-一、立法.md
+++ b/2-1法理学-一、立法.md
@@ -36,6 +36,24 @@
     在我国只有全国人大及其常委会以及授权的机关才能制定法律，其他机关无法制定法律
     县级人大及其常委会就无权制定法律
 
+##### jcd9（ABCD）只能制定法律
+    A:诉讼和仲裁制度
+    B:海关的基本制度
+    C:基层群众自治制度
+    D:对非国有财产的征收
+    
+    《立法法》第八条 下列事项只能制定法律：
+    （一）国家主权的事项；
+    （二）各级人民代表大会、人民政府、人民法院和人民检察院的产生、组织和职权；
+    （三）民族区域自治制度、特别行政区制度、基层群众自治制度；
+    （四）犯罪和刑罚；
+    （五）对公民政治权利的剥夺、限制人身自由的强制措施和处罚；
+    （六）税种的设立、税率的确定和税收征收管理等税收基本制度；
+    （七）对非国有财产的征收、征用；
+    （八）民事基本制度；
+    （九）基本经济制度以及财政、海关、金融和外贸的基本制度；
+    （十）诉讼和仲裁制度；
+    （十一）必须由全国人民代表大会及其常务委员会制定法律的其他事项。
 
 
 
