--- a/2-2宪法-公民的基本权利和义务.md
+++ b/2-2宪法-公民的基本权利和义务.md
@@ -55,8 +55,15 @@
 
 ### 4.人身权利。
     它是指公民依法享有的与人身直接相关的权利。公民基本权利的重要部分。
-    包括人身自由不受侵犯，人格尊严不受侵犯，住宅不受侵犯，通信自由和通信秘密不受侵犯等。其中，公民的人身自由不受侵犯是指公民不受非法逮捕、拘禁，不被非法剥夺、限制自由及非法搜查身体的自由。
-
+    包括人身自由不受侵犯，人格尊严不受侵犯，住宅不受侵犯，通信自由和通信秘密不受侵犯等。
+    其中，公民的``人身自由``不受侵犯是指公民不受非法逮捕、拘禁，不被非法剥夺、限制自由及非法搜查身体的自由。
+    
+##### jcd25公民的人身自由不受侵犯是指（ABD）
+    A:公民不受非法逮捕，拘禁
+    B:不被非法布偶多，限制自由
+    C:公民住宅不受侵犯 (这个是人身权利，而不是人身自由)
+    D:不受非法搜查身体    
+    
 ### 5.社会经济权利。
     它是指公民根据宪法规定享有的具有物质经济利益的权利，是公民实
     现基本权利的物质保障。主要包括：【劳动的权利，休息的权利，获得物质帮助的权利】。
@@ -104,19 +111,40 @@
 
 
 
+
 ###（2）我国公民服兵役义务的形式
 
     ①服现役——参加人民解放军或武装警察部队；
     ②服预备役——参加民兵组织或经过预备役登记；
     ③参加军训——高等院校或高级中学的学生的军事训练；
     ④承担优抚费——人民群众对义务兵家属、民兵和其他预备役人员承担一定的优抚费或者误工补贴。
+    
+##### jcd26我国公民服兵役的形式包括（ABCD）
+    A:承担优抚费
+    B:服预备役
+    C:参加军训
+    D:服现役
+    
 
 ### 5.依法纳税
     此外，宪法还规定，公民劳动的义务、受教育的义务、夫妻双方实行计划生育的义务、
     父母抚养教育未成年子女的义务、成年子女赡养扶助父母的义务。
 
 
+##### jcd8对法律权利和义务，从其存在的形态可划分为（BD）
+    A:国家权利和义务
+    B:法定权利和义务
+    C:个体权利和义务
+    D:习惯权利和义务
+    
+    （一）从权利和义务的存在形态可划分为应有权利和义务、习惯权利和义务、法定权利和义务、现实权利和义务。 
 
+
+##### jcd24我国公民的基本权利有（ABCD）
+    A:社会经济权利
+    B:文化教育权利
+    C:人身权利
+    D:平等权
 
 
 
