--- a/2-2宪法-公民的基本权利和义务.md
+++ b/2-2宪法-公民的基本权利和义务.md
@@ -146,7 +146,11 @@
     C:人身权利
     D:平等权
 
-
+##### jcd23人权通常分为三个阶段，第三阶段的人权主要是从二战后反殖民主义的民族解放运动中产生和发展起来的。其内容包括（ACD）
+    A:民族自决权
+    B:公正审判权
+    C:和平权，发展权
+    D:自然资源永久主权
 
 
 
