--- a/法律题-2.md
+++ b/法律题-2.md
@@ -158,76 +158,431 @@
 
 
 
+##### jcd31 下列构成贪污罪的有（A）
+    A．甲是某国有保险公司委派到其他保险公司从事公务的人员，
+        其利用职务之便伪造保险事故，骗取保险理赔金30万元
+    B．乙是政府的行政人员，其利用办公地点靠近财务科的条件，从财务科窃取现金2万元
+    C．丙是某市外事局的局长，其在接见外国来访客人的时候，收到客人送给该市的价值5000美金的纪念品一件，丙见该纪念品做工精美，价格不菲，于是据为己有
+    D．丁是村委会的工作人员，在一次协助征兵工作中，丁收受他人的钱财，将他人的子女征兵入伍
+    E．戊是某大学校长，擅自挪用建设新校区资金100万元进行炒股
 
+##### jcd32 渎职罪包括（）
+    A:泄漏国家秘密罪
+    B:动物检疫失职罪
+    C:非法批准征用土地罪
+    D:失职造成珍贵文物损毁罪
 
-##### jcd23人权通常分为三个阶段，第三阶段的人权主要是从二战后反殖民主义的民族解放运动中产生和发展起来的。其内容包括（ACD）
-    A:民族自决权
-    B:公正审判权
-    C:和平权，发展权
-    D:自然资源永久主权
+##### jcd33 （）不适用死刑
+    A:犯罪的时候不满18周岁
+    B:审判的时候不满18周岁
+    C:审判的时候已满75周岁
+    D:犯罪的时候怀孕的妇女
 
+##### jcd34 以下关于剥夺政治权利期限的说法，正确的是（）
+    A:判处管制附加剥夺政治权利的，剥夺政治权利的期限和管制的期限相等
+    B:对判处死刑，无期徒刑的犯罪分子，应该剥夺政治权利终身
+    C:在无期徒刑减为有期徒刑时，应把附加剥夺政治权利的期限改为5年以上10年以下
+    D:剥夺政治权利的期限，一般是1年以上，5年以下
 
+##### jcd35行政法调整的对象是（）
+    A:行政关系
+    B:行政法律关系
+    C:监督行政关系
+    D:监督行政法律关系
 
+##### jcd36属于行政行为的有（）
+    A:行政机关够买办公用品
+    B:行政机关制定规范性文件
+    C:街道办事处与居委签订卫生管理承包合同
+    D:天气预报
 
-##### jcd31
+##### jcd37行政行为的法律效力包括（）
+    A:公定力
+    B:确定力
+    C:拘束力
+    D:执行力
+
+##### jcd38（）不是行政行为的主要特征
+    A:效力先定性
+    B:管理性
+    C:权力性
+    D:单方意志性
+
+##### jcd39我国的行政立法主体包括（）等
+    A:国务院
+    B:中国人民银行
+    C:广州市人民政府
+    D:最高人民检察院
+
+##### jcd40我国的行政给付形式主要包括（）
+    A:优待
+    B:救济金
+    C:社会福利
+    D:生活补助费
+
+##### jcd41
     A:
     B:
     C:
     D:
 
-##### jcd32
+
+##### jcd42
     A:
     B:
     C:
     D:
 
-##### jcd33
+##### jcd43
     A:
     B:
     C:
     D:
 
-##### jcd34
+##### jcd44
     A:
     B:
     C:
     D:
 
-##### jcd35
+##### jcd45
     A:
     B:
     C:
     D:
 
-##### jcd36
+##### jcd46
     A:
     B:
     C:
     D:
 
-##### jcd37
+##### jcd47
     A:
     B:
     C:
     D:
 
-##### jcd38
+##### jcd48
     A:
     B:
     C:
     D:
 
-##### jcd39
+##### jcd49
     A:
     B:
     C:
     D:
 
-##### jcd40
+##### jcd50
     A:
     B:
     C:
     D:
+
+##### jcd51
+    A:
+    B:
+    C:
+    D:
+
+##### jcd52
+    A:
+    B:
+    C:
+    D:
+
+##### jcd53
+    A:
+    B:
+    C:
+    D:
+
+##### jcd54
+    A:
+    B:
+    C:
+    D:
+
+##### jcd55
+    A:
+    B:
+    C:
+    D:
+
+##### jcd56
+    A:
+    B:
+    C:
+    D:
+
+##### jcd57
+    A:
+    B:
+    C:
+    D:
+
+##### jcd58
+    A:
+    B:
+    C:
+    D:
+
+##### jcd59
+    A:
+    B:
+    C:
+    D:
+
+##### jcd60
+    A:
+    B:
+    C:
+    D:
+
+##### jcd61
+    A:
+    B:
+    C:
+    D:
+
+##### jcd62
+    A:
+    B:
+    C:
+    D:
+
+##### jcd63
+    A:
+    B:
+    C:
+    D:
+
+##### jcd64
+    A:
+    B:
+    C:
+    D:
+
+##### jcd65
+    A:
+    B:
+    C:
+    D:
+
+##### jcd66
+    A:
+    B:
+    C:
+    D:
+
+##### jcd67
+    A:
+    B:
+    C:
+    D:
+
+##### jcd68
+    A:
+    B:
+    C:
+    D:
+
+##### jcd69
+    A:
+    B:
+    C:
+    D:
+
+##### jcd70
+    A:
+    B:
+    C:
+    D:
+
+##### jcd71
+    A:
+    B:
+    C:
+    D:
+
+##### jcd72
+    A:
+    B:
+    C:
+    D:
+
+##### jcd73
+    A:
+    B:
+    C:
+    D:
+
+##### jcd74
+    A:
+    B:
+    C:
+    D:
+
+##### jcd75
+    A:
+    B:
+    C:
+    D:
+
+##### jcd76
+    A:
+    B:
+    C:
+    D:
+
+##### jcd77
+    A:
+    B:
+    C:
+    D:
+
+##### jcd78
+    A:
+    B:
+    C:
+    D:
+
+##### jcd79
+    A:
+    B:
+    C:
+    D:
+
+##### jcd80
+    A:
+    B:
+    C:
+    D:
+
+##### jcd81
+    A:
+    B:
+    C:
+    D:
+
+##### jcd82
+    A:
+    B:
+    C:
+    D:
+
+##### jcd83
+    A:
+    B:
+    C:
+    D:
+
+##### jcd84
+    A:
+    B:
+    C:
+    D:
+
+##### jcd85
+    A:
+    B:
+    C:
+    D:
+
+##### jcd86
+    A:
+    B:
+    C:
+    D:
+
+##### jcd87
+    A:
+    B:
+    C:
+    D:
+
+##### jcd88
+    A:
+    B:
+    C:
+    D:
+
+##### jcd89
+    A:
+    B:
+    C:
+    D:
+
+##### jcd90
+    A:
+    B:
+    C:
+    D:
+
+##### jcd91
+    A:
+    B:
+    C:
+    D:
+
+##### jcd92
+    A:
+    B:
+    C:
+    D:
+
+##### jcd93
+    A:
+    B:
+    C:
+    D:
+
+##### jcd94
+    A:
+    B:
+    C:
+    D:
+
+##### jcd95
+    A:
+    B:
+    C:
+    D:
+
+##### jcd96
+    A:
+    B:
+    C:
+    D:
+
+##### jcd97
+    A:
+    B:
+    C:
+    D:
+
+##### jcd98
+    A:
+    B:
+    C:
+    D:
+    
+##### jcd99
+    A:
+    B:
+    C:
+    D:
+
+
+##### jcd100
+    A:
+    B:
+    C:
+    D:
+
+
 
 
 
