--- a/2-3主要实体法-第一节 刑法-五、基本犯罪类型和职务犯罪.md
+++ b/2-3主要实体法-第一节 刑法-五、基本犯罪类型和职务犯罪.md
@@ -26,7 +26,7 @@
     C:中外合资企业中的外方管理人员
     D:受企业委托管理国有财产的人员    
     
-###（2）挪用公款罪。【个人非法，较大的三个月营利】
+###（2）挪用公款罪。【个人非法较大的，三个月营利】
 
     指国家工作人员利用``职务上的便利``，
     挪用公款归个人使用，进行非法活动的，
@@ -78,6 +78,17 @@
 
 ##### dz16 贪污贿赂（hui lu）罪包含，挪用公款罪，介绍贿赂罪，巨额财产来源不明罪隐瞒境外存款罪，私分国有财产罪和私分罚没财务罪（√ ）    
 
+##### jcd31 下列构成贪污罪的有（AC）
+    A．甲是某国有保险公司委派到其他保险公司从事公务的人员，
+        其利用职务之便伪造保险事故，骗取保险理赔金30万元（骗取）
+    B．乙是政府的行政人员，其利用办公地点靠近财务科的条件，从财务科窃取现金2万元
+    C．丙是某市外事局的局长，其在接见外国来访客人的时候，收到客人送给该市的价值5000美金的纪念品一件，丙见该纪念品做工精美，价格不菲，于是据为己有（侵吞）
+    D．丁是村委会的工作人员，在一次协助征兵工作中，丁收受他人的钱财，将他人的子女征兵入伍（受贿罪）
+    E．戊是某大学校长，擅自挪用建设新校区资金100万元进行炒股
+    
+
+    
+
 
 ### 2.渎职罪
     渎职罪是指国家机关工作人员``故意或者过失``亵渎职权、职务的犯罪行为。渎职罪主要包
@@ -97,3 +108,27 @@
     （4）徇私枉法罪。
         指司法工作人员故意违背法律和事实，应当追究刑事责任而不追究，
         或者不应当追究刑事责任而追究，或者在刑事审判中作出枉法裁判的行为。
+
+##### jcd32 渎职罪包括（ABCD）
+    A:泄漏国家秘密罪:玩忽职守
+    B:动物检疫失职罪：玩忽职守
+    C:非法批准征用土地罪：滥用职权罪
+    D:失职造成珍贵文物损毁罪：玩忽职守
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    
