--- a/2-3主要实体法-第一节 刑法-六、刑罚的种类.md
+++ b/2-3主要实体法-第一节 刑法-六、刑罚的种类.md
@@ -22,10 +22,13 @@
     （5）死刑。
         是剥夺犯罪分子生命的一种刑罚。
         我国刑法规定，【死刑只适用于罪刑极其严重的犯罪分子】。
-        对于【犯罪时未满 18 岁的人和审判时怀孕的妇女】，不得适用死刑。死刑包
-        括死刑立即执行和死刑缓期执行，对于应当判处死刑的犯罪分子，如果不是必须立即执行的，
-        可以在判处死刑的同时，宣告缓期二年执行，
+        对于【犯罪时未满 18 岁的人和审判时怀孕的妇女】，不得适用死刑。
+        审判的时候已满七十五周岁的人，不适用死刑，但以特别残忍手段致人死亡的除外。
+        
+        死刑包括死刑立即执行和死刑缓期执行，对于应当判处死刑的犯罪分子，
+        如果不是必须立即执行的，可以在判处死刑的同时，宣告缓期二年执行，
         【在二年缓期考验期间，如果没有故意犯罪的，两年考验期满后减为无期徒刑；】
+        
         【如果有重大立功表现的，可以减为 15 年以上 20 年以下有期徒刑。】
     
 ##### 在判处死刑执行的，在二年缓期考验期间，如果没有犯罪的，两年考验期满后减为无期徒刑。（×）
@@ -33,6 +36,13 @@
 
 
 ##### dz10 管制是轻于拘役的刑罚，因此管制的最低期限比拘役最低期限更低（×）
+
+
+##### jcd33 （ABC）不适用死刑
+    A:犯罪的时候不满18周岁
+    B:审判的时候不满18周岁
+    C:审判的时候已满75周岁
+    D:犯罪的时候怀孕的妇女
 
 
 ### 2.附加刑
