--- a/政治权利.md
+++ b/政治权利.md
@@ -61,3 +61,25 @@
     B. ①③
     C. ①③④
     D. ①④    
+
+##### jcd34 以下关于剥夺政治权利期限的说法，正确的是（ABD）
+    A:判处管制附加剥夺政治权利的，剥夺政治权利的期限和管制的期限相等
+    B:对判处死刑，无期徒刑的犯罪分子，应该剥夺政治权利终身
+    C:在无期徒刑减为有期徒刑时，应把附加剥夺政治权利的期限改为5年以上10年以下:（是：3年以上10年以下）
+    D:剥夺政治权利的期限，一般是1年以上，5年以下
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    
