--- a/法律题-2.md
+++ b/法律题-2.md
@@ -158,61 +158,20 @@
 
 
 
-##### jcd31 下列构成贪污罪的有（A）
-    A．甲是某国有保险公司委派到其他保险公司从事公务的人员，
-        其利用职务之便伪造保险事故，骗取保险理赔金30万元
-    B．乙是政府的行政人员，其利用办公地点靠近财务科的条件，从财务科窃取现金2万元
-    C．丙是某市外事局的局长，其在接见外国来访客人的时候，收到客人送给该市的价值5000美金的纪念品一件，丙见该纪念品做工精美，价格不菲，于是据为己有
-    D．丁是村委会的工作人员，在一次协助征兵工作中，丁收受他人的钱财，将他人的子女征兵入伍
-    E．戊是某大学校长，擅自挪用建设新校区资金100万元进行炒股
 
-##### jcd32 渎职罪包括（）
-    A:泄漏国家秘密罪
-    B:动物检疫失职罪
-    C:非法批准征用土地罪
-    D:失职造成珍贵文物损毁罪
 
-##### jcd33 （）不适用死刑
-    A:犯罪的时候不满18周岁
-    B:审判的时候不满18周岁
-    C:审判的时候已满75周岁
-    D:犯罪的时候怀孕的妇女
 
-##### jcd34 以下关于剥夺政治权利期限的说法，正确的是（）
-    A:判处管制附加剥夺政治权利的，剥夺政治权利的期限和管制的期限相等
-    B:对判处死刑，无期徒刑的犯罪分子，应该剥夺政治权利终身
-    C:在无期徒刑减为有期徒刑时，应把附加剥夺政治权利的期限改为5年以上10年以下
-    D:剥夺政治权利的期限，一般是1年以上，5年以下
 
-##### jcd35行政法调整的对象是（）
-    A:行政关系
-    B:行政法律关系
-    C:监督行政关系
-    D:监督行政法律关系
 
-##### jcd36属于行政行为的有（）
-    A:行政机关够买办公用品
-    B:行政机关制定规范性文件
-    C:街道办事处与居委签订卫生管理承包合同
-    D:天气预报
 
-##### jcd37行政行为的法律效力包括（）
-    A:公定力
-    B:确定力
-    C:拘束力
-    D:执行力
 
-##### jcd38（）不是行政行为的主要特征
-    A:效力先定性
-    B:管理性
-    C:权力性
-    D:单方意志性
 
-##### jcd39我国的行政立法主体包括（）等
-    A:国务院
-    B:中国人民银行
-    C:广州市人民政府
-    D:最高人民检察院
+
+
+
+
+
+
 
 ##### jcd40我国的行政给付形式主要包括（）
     A:优待
@@ -220,66 +179,66 @@
     C:社会福利
     D:生活补助费
 
-##### jcd41
-    A:
-    B:
-    C:
-    D:
+##### jcd41县政府的重大行政决策机制包括（）等
+    A:听证制度
+    B:听取意见制度
+    C:合理性审查制度
+    D:实施情况后评价制度
 
 
-##### jcd42
-    A:
-    B:
-    C:
-    D:
+##### jcd42行政许可申请可以通过（）等方式提出
+    A:电子数据交换
+    B:电子邮件
+    C:传真
+    D:电话
 
-##### jcd43
-    A:
-    B:
-    C:
-    D:
+##### jcd43行政机关作出行政许可决定，依法需要进行并且所需时间可以不计算在期限内的事项有（）
+    A:听证
+    B:招标，拍卖
+    C:检验，检测，检疫
+    D:鉴定，专家评审
 
-##### jcd44
-    A:
-    B:
-    C:
-    D:
+##### jcd44我国行政处罚的种类（）
+    A:警告
+    B:降级
+    C:责令停产停业
+    D:冻结资产
 
-##### jcd45
-    A:
-    B:
-    C:
-    D:
+##### jcd45行政处罚规定了一系列保障行政处罚公开的制度，如（）
+    A:告知制度
+    B:听证制度
+    C:听取意见制度
+    D:表明身份制度
 
-##### jcd46
-    A:
-    B:
-    C:
-    D:
+##### jcd46不予行政处罚的情形有（）
+    A:不满14周岁的人有违法行为的
+    B:受他人胁迫有违法行为的
+    C:一般来说，违法行为在2年内未被发现的
+    D:违法行为轻微，并及时纠正，没有造成危害后果的。
 
-##### jcd47
-    A:
-    B:
-    C:
-    D:
+##### jcd47根据我国行政处罚法的有关规定，地方性法规可以设定（）处罚种类
+    A:限制人身自由
+    B:没收违法所得
+    C:吊销企业营业执照
+    D:责令停产停业
 
-##### jcd48
-    A:
-    B:
-    C:
-    D:
+##### jcd48张某家住甲县，在乙县制作盗版光盘，经过丙县运输到丁县进行销售。要对张某的行为进行处罚，（）具有行政处罚权的行政机关有管辖权
+    A:甲县
+    B:乙县
+    C:丙县
+    D:丁县
 
-##### jcd49
-    A:
-    B:
-    C:
-    D:
+##### jcd49我国《侵权责任法》中的民事权益包括（）
+    A:健康权
+    B:隐私权
+    C:发现权
+    D:担保物权
 
-##### jcd50
-    A:
-    B:
-    C:
-    D:
+##### jcd50我国《侵权责任法》中的人身损害赔偿包括（）
+    A:医疗费
+    B:护理费
+    C:误工费
+    D:死亡赔偿金
 
 ##### jcd51
     A:
