--- a/2-3主要实体法-第二节 行政法-（二）行政行为分类.md
+++ b/2-3主要实体法-第二节 行政法-（二）行政行为分类.md
@@ -17,3 +17,21 @@
     根据行政行为的对象是否特定，而不是行为对象做标准
     行为对象：老人，小孩，这些都是行为对象，但是不是分类标准
     行为对象是否特定：特定：特别规定的标准。就是说一种是特别规定的，而另外一种不是特别规定的。
+
+
+##### jcd36属于行政行为的有（BC）
+    A:行政机关够买办公用品
+    B:行政机关制定规范性文件
+    C:街道办事处与居委签订卫生管理承包合同
+    D:天气预报
+    
+    
+    A。购买办公用品显然属于民事行为
+    B。制定规范性文件。
+        这属于抽象行政行为。
+    《行政诉讼法》第12条规定了抽象行政行为的可诉性。同时最高人民法院关于执行《中华人民共和国行政诉讼法》若干问题的解释第3条也作了规定。
+    需要特别说明的，这不属于立法法的调整范畴，可以查阅立法法。
+    因此可选。
+    C。对照以上三个条件可知，街道办与居委会的卫生管理合同明显具有行政的性质，虽然具有协商的性质，但更关键还是行政性质，属于行政合同。行政合同与民事合同之不同关键表现在标的内容。卫生管理显然不可能属于民事类。
+    因此可选。
+    D。天气预报，显然不符合以上第三点的规定。天气预报并不产生法律效果，其本身不具有法律意义。
