--- a/法律题-2.md
+++ b/法律题-2.md
@@ -152,225 +152,137 @@
 
     
 
+##### jcd51行政强制措施包括（）
+    A:查封场所
+    B:扣押财物
+    C:冻结汇款
+    D:限制公民人生自由
 
+##### jcd52行政强制执行的方式包括（）
+    A:拍卖
+    B:罚款
+    C:代履行
+    D:排除妨碍
 
+##### jcd53某公民在参与应急救援工作期间，有权享受（）
+    A:在本单位工资待遇不变
+    B:在本单位的福利不变
+    C:可以获得政府的奖励
+    D:可以获得政府的表彰
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-##### jcd40我国的行政给付形式主要包括（）
-    A:优待
-    B:救济金
-    C:社会福利
-    D:生活补助费
-
-##### jcd41县政府的重大行政决策机制包括（）等
-    A:听证制度
-    B:听取意见制度
-    C:合理性审查制度
-    D:实施情况后评价制度
-
-
-##### jcd42行政许可申请可以通过（）等方式提出
-    A:电子数据交换
-    B:电子邮件
+##### jcd54公民法人或者其他组织可以采用（）等形式向各级人民政府，县级人民政府工作部门反映情况，提出建议，意见，或者投诉的请求，依法由有关行政机关处理的信访形式
+    A:口头
+    B:走访
     C:传真
-    D:电话
+    D:电子邮件
 
-##### jcd43行政机关作出行政许可决定，依法需要进行并且所需时间可以不计算在期限内的事项有（）
-    A:听证
-    B:招标，拍卖
-    C:检验，检测，检疫
-    D:鉴定，专家评审
+##### jcd55下列权利中属于人格权的有（）
+    A:身体权
+    B:监护权
+    C:名称权
+    D:荣誉权
 
-##### jcd44我国行政处罚的种类（）
-    A:警告
-    B:降级
-    C:责令停产停业
-    D:冻结资产
+##### jcd56物权具有（）特点
+    A:排他性
+    B:独占性
+    C:统一性
+    D:追及力
 
-##### jcd45行政处罚规定了一系列保障行政处罚公开的制度，如（）
-    A:告知制度
-    B:听证制度
-    C:听取意见制度
-    D:表明身份制度
+##### jcd57我国担保的方式有（）
+    A:保证
+    B:质押
+    C:留置
+    D:定金
 
-##### jcd46不予行政处罚的情形有（）
-    A:不满14周岁的人有违法行为的
-    B:受他人胁迫有违法行为的
-    C:一般来说，违法行为在2年内未被发现的
-    D:违法行为轻微，并及时纠正，没有造成危害后果的。
+##### jcd58我国民事责任的归责原则（）
+    A:过错责任原则
+    B:客观归责原则
+    C:因果关联原则
+    D:衡平责任原则
 
-##### jcd47根据我国行政处罚法的有关规定，地方性法规可以设定（）处罚种类
-    A:限制人身自由
-    B:没收违法所得
-    C:吊销企业营业执照
-    D:责令停产停业
+##### jcd59属于我国民法基本原则的有（）
+    A:果实责任原则
+    B:自愿公平等价有偿的原则
+    C:保护公民，法人合法民事权益原则
+    D:禁止权利滥用原则
 
-##### jcd48张某家住甲县，在乙县制作盗版光盘，经过丙县运输到丁县进行销售。要对张某的行为进行处罚，（）具有行政处罚权的行政机关有管辖权
-    A:甲县
-    B:乙县
-    C:丙县
-    D:丁县
-
-##### jcd49我国《侵权责任法》中的民事权益包括（）
-    A:健康权
-    B:隐私权
+##### jcd60我国知识产权包括（）
+    A:著作权
+    B:商标权
     C:发现权
-    D:担保物权
+    D:债权
 
-##### jcd50我国《侵权责任法》中的人身损害赔偿包括（）
-    A:医疗费
-    B:护理费
-    C:误工费
-    D:死亡赔偿金
+##### jcd61我国的著作权包括（）
+    A:修改权
+    B:发行权
+    C:信息网络传播权
+    D:保护作品完整权
 
-##### jcd51
-    A:
-    B:
-    C:
-    D:
+##### jcd62在我国，对（）不授予专利权
+    A:植物品种的生产方法
+    B:疾病的治疗方法
+    C:智力活动的方法
+    D:科学发现
 
-##### jcd52
-    A:
-    B:
-    C:
-    D:
+##### jcd63下列情形中属于无效合同的是（）
+    A:损害社会公共利益的合同
+    B:无权代理人以他人名义签订的合同
+    C:当事人一方不能履行义务的合同
+    D:采用欺诈，胁迫手段签订的合同
 
-##### jcd53
-    A:
-    B:
-    C:
-    D:
+##### jcd64在我国，（）补鞥呢成为普通合伙人
+    A:上市公司
+    B:国有企业
+    C:私人医院
+    D:国有独资公司
 
-##### jcd54
-    A:
-    B:
-    C:
-    D:
+##### jcd65我国公司法所调整的公司类型包括（）
+    A:无限公司
+    B:两合公司
+    C:股份有限公司
+    D:有限责任公司
 
-##### jcd55
-    A:
-    B:
-    C:
-    D:
+##### jcd66股份有限公司设立的方式（）
+    A:发起设立
+    B:募集设立
+    C:登记设立
+    D:批准设立
 
-##### jcd56
-    A:
-    B:
-    C:
-    D:
+##### jcd67公司从事经营活动，必须（）
+    A:遵守行政规章
+    B:遵守社会公德
+    C:接受社会公众的监督
+    D:承担社会责任
 
-##### jcd57
-    A:
-    B:
-    C:
-    D:
+##### jcd68下列（）属于不正当竞争行为。
+    A:损害商业信誉
+    B:泄漏商业秘密
+    C:串通招投标
+    D:虚假宣传
 
-##### jcd58
-    A:
-    B:
-    C:
-    D:
+##### jcd69经济法的基本原则（）
+    A:平等自愿
+    B:平衡协调原则
+    C:维护公平竞争
+    D:责权利相统一
 
-##### jcd59
-    A:
-    B:
-    C:
-    D:
+##### jcd70订立劳动合同，应当遵循（）等原则
+    A:合法
+    B:自由
+    C:公正
+    D:诚实
 
-##### jcd60
-    A:
-    B:
-    C:
-    D:
+##### jcd71劳动合同终止的情形包括（）
+    A:劳动合同期满
+    B:用人单位被吊销营业执照
+    C:用人单位依法宣告破产
+    D:劳动者开始依法享受基本养老待遇
 
-##### jcd61
-    A:
-    B:
-    C:
-    D:
-
-##### jcd62
-    A:
-    B:
-    C:
-    D:
-
-##### jcd63
-    A:
-    B:
-    C:
-    D:
-
-##### jcd64
-    A:
-    B:
-    C:
-    D:
-
-##### jcd65
-    A:
-    B:
-    C:
-    D:
-
-##### jcd66
-    A:
-    B:
-    C:
-    D:
-
-##### jcd67
-    A:
-    B:
-    C:
-    D:
-
-##### jcd68
-    A:
-    B:
-    C:
-    D:
-
-##### jcd69
-    A:
-    B:
-    C:
-    D:
-
-##### jcd70
-    A:
-    B:
-    C:
-    D:
-
-##### jcd71
-    A:
-    B:
-    C:
-    D:
-
-##### jcd72
-    A:
-    B:
-    C:
-    D:
+##### jcd72职工有（）情形，视同工伤
+    A:在工作时间和工作岗位，突发疾病或者48小时内抢救无效死亡的
+    B:职工在抢险救灾中受到伤害的
+    C:在上下班途中，受到城市轨道交通，客运轮渡，或者事故伤害的
+    D:职工原在军队服役，因战，因公负伤致残，已取得革命伤残军人证，在用人单位后旧伤复发的
 
 ##### jcd73
     A:
