--- a/行政许可.md
+++ b/行政许可.md
@@ -312,7 +312,19 @@
     C:公正机关公正
     D:行政机关颁发
 
-
+##### jcd42行政许可申请可以通过（ABC）等方式提出
+    A:电子数据交换
+    B:电子邮件
+    C:传真
+    D:电话
+    行政许可必须是书面申请：但是申请的方式（主要是电信电子的方式）
+    电话属于：口头的方式
+    
+##### jcd43行政机关作出行政许可决定，依法需要进行并且所需时间可以不计算在期限内的事项有（ABCD）
+    A:听证
+    B:招标，拍卖
+    C:检验，检测，检疫
+    D:鉴定，专家评审
 
 
 
