--- a/行政强制措施和行政强制执行和行政处罚.md
+++ b/行政强制措施和行政强制执行和行政处罚.md
@@ -80,6 +80,29 @@
         法条中：6类以列举方式全部列出
         警告，罚款，没收违法所得和没收非法财物，责令停产停业，暂扣或吊销许可证、执照，拘留。          
 
+### 《行政处罚法》
+    第四章　行政处罚的管辖和适用
+    　　第二十四条　对当事人的同一个违法行为，不得给予两次以上罚款的行政处罚。
+    　　第二十五条　不满十四周岁的人有违法行为的，不予行政处罚，责令监护人加以管教；
+            已满十四周岁不满十八周岁的人有违法行为的，从轻或者减轻行政处罚。
+    
+    　　第二十六条　精神病人在不能辨认或者不能控制自己行为时有违法行为的，不予行政处罚，但应当责令其监护人严加看管和治疗。
+            间歇性精神病人在精神正常时有违法行为的，应当给予行政处罚。
+    
+    　　第二十七条　当事人有下列情形之一的，应当依法从轻或者减轻行政处罚：
+    　　（一）主动消除或者减轻违法行为危害后果的；
+    　　（二）受他人胁迫有违法行为的；
+    　　（三）配合行政机关查处违法行为有立功表现的；
+    　　（四）其他依法从轻或者减轻行政处罚的。
+    
+    　　违法行为轻微并及时纠正，没有造成危害后果的，不予行政处罚。
+    　　第二十八条　违法行为构成犯罪，人民法院判处拘役或者有期徒刑时，行政机关已经给予当事人行政拘留的，“应当依法折抵相应刑期”。
+    　　违法行为构成犯罪，人民法院判处罚金时，行政机关已经给予当事人罚款的，应当折抵相应罚金。
+    
+    　　第二十九条　违法行为在二年内未被发现的，不再给予行政处罚。法律另有规定的除外。
+    　　前款规定的期限，从违法行为发生之日起计算；违法行为有连续或者继续状态的，从行为终了之日起计算。
+
+
 ##### 某个体户因经常出售注水肘肉，被工商行政机关吊销营业执照，该项处罚属于（C）
     A:财产罚
     B:人身自由罚
@@ -152,11 +175,41 @@
     C:违法行为情节显著轻微或者没有明显社会危害的，可以不采取行政强制措施
     D:当场告知或者实施行政强制措施后，立即通知当事人家属实施行政强制措施的行政机关，地点，期限。
 
+##### jcd44我国行政处罚的种类（AC）
+    A:警告
+    B:降级
+    C:责令停产停业
+    D:冻结资产
 
+##### jcd45行政处罚规定了一系列保障行政处罚公开的制度，如（ABCD）
+    A:告知制度
+    B:听证制度
+    C:听取意见制度
+    D:表明身份制度
 
+##### jcd46不予行政处罚的情形有（ACD）
+    A:不满14周岁的人有违法行为的
+    B:受他人胁迫有违法行为的
+    C:一般来说，违法行为在2年内未被发现的
+    D:违法行为轻微，并及时纠正，没有造成危害后果的。
 
+##### jcd47根据我国行政处罚法的有关规定，地方性法规可以设定（BD）处罚种类
+    A:限制人身自由
+    B:没收违法所得
+    C:吊销企业营业执照
+    D:责令停产停业
+    
+    地方性法规可以设定除了：限制人身自由和吊销企业营业执照的处罚
 
-
+##### jcd48张某家住甲县，在乙县制作盗版光盘，经过丙县运输到丁县进行销售。要对张某的行为进行处罚，（BCD）具有行政处罚权的行政机关有管辖权
+    A:甲县
+    B:乙县
+    C:丙县
+    D:丁县
+    
+    行政处罚的地域管辖：行为实施地（违法行为和相关行为实施地）和结果发生地
+    
+    
 
 
 
