'道德和事业单位条例'

--- a/刷题-公文.md
+++ b/刷题-公文.md
@@ -130,37 +130,111 @@
     C:办公室交由有关机关或人员立即办理
     D:由办公室直接办理或安排办理
 
-##### st10 在公文格式中，下列属于主题部分的是（）
-    A: 52分钟
-    B:
-    C:
-    D:
+##### st10 在公文格式中，下列属于主体部分的是（B）
+    A:发文字号
+    B:成文日期
+    C:注释
+    D:份号
 
-##### st4
+##### st11市政委向规划局请求批准单位建设规划，应使用（C）
+    A:报告
+    B:请示
+    C:函
+    D:请示报告
+    
+    没有隶属关系
+
+##### st12编目是对组合之后的文件加以系统排列并编列出（B）
+    A:卷内文字次号
+    B:卷内文件目录
+    C:立卷目录
+    D:立卷计划和案卷目录
+    
+    编目：就是编写目录，是对案卷内部的文件编目
+
+##### st13新的规范性公文产生了，对同一事物的约束，规范的旧文件应（D）
+    A:两法并存
+    B:新不废旧
+    C:相辅相成
+    D:废止旧法
+
+##### st14公文的本质特点（A）
+    A:明确的工具性
+    B:极强的政策性
+    C:格式的规定性
+    D:作用的权威性
+    
+    国家用公文作为工具来传达国家，政府的意志！
+    
+##### st1维护公文的简明性，易出的问题有（ABD）
+    A:主题不明，离题万里
+    B:赘言泛滥，大量重复
+    C:语言含混，语义多歧
+    D:归类不全，挂一漏万
+    
+    
+##### st2下列哪些情况可以联合行文（ABCD）
+    A:统计政府之间
+    B:政府及其部门与同级党委之间
+    C:上一级政府部门，下一级政府之间
+    D:政府部门，和同级人民团体
+
+##### st3我国法定的公布性文件包括（BCD）
+    A:布告
+    B:通告
+    C:通报
+    D:公告
+    
+    公布性:直接面向社会公众(公公告)（公报，公告，通告）
+    
+    
+##### st4公文的作用包括（ABCD）
+    A:明法布阵
+    B:领导管理
+    C:宣传引导
+    D:联系交流
+            
+##### st5批复具有的特点（ABD）
+    A:单一性
+    B:指示性
+    C:主动性:批复是被动的
+    D:时限性
+
+##### st6适合通报行文的有（BCD）
+    A:渝北区政府在2017年为老百姓办七件实事
+    B:市委，市政府决定授予沙坪坝某单位为“双拥”工作先进单位荣誉称号
+    C:市委，市政府，决定授予方林通知“返乡创业明星”称号
+    D:市政府办公室告知各区县和有关部门2016年卫生检查工作,考核情况
+
+##### st7应当遵守行文规则的原因有（ABD）
+    A:确保公文迅速，准确的传递
+    B:避免行文紊乱
+    C:保证公文发行
+    D:确定行文关系
+
+##### st8案卷归档的主要内容有（ABD）
+    A:归档范围
+    B:归档时限
+    C:归档原则
+    D:归档要求
+
+##### st9
     A:
     B:
     C:
     D:
 
-##### st4
+##### st10
     A:
     B:
     C:
     D:
 
-##### st4
+##### st11
     A:
     B:
     C:
     D:
-
-
-
-
-
-
-
-
 
 
 
