'道德和事业单位条例'

--- a/刷题-道德和事业单位条例.md
+++ b/刷题-道德和事业单位条例.md
@@ -42,59 +42,74 @@
     C:享乐主义
     D:拜金主义
 
-##### st10 19分钟
-
-##### st11 
-
-##### st12
-
-##### st8 
+##### st10 对于一个企业的员工来说，企业的高压线，禁区指的是（D）
+    A:职业良知
+    B:上级命令
+    C:群众要求
+    D:职业纪律
 
 
-##### st8 
+##### st11 事业单位的基本工资包括（C）
+    A:岗位工资和绩效工资
+    B:薪级工资和绩效工资
+    C:岗位工资和薪级工资
+    D:岗位工资和补贴
+    薪级工资：你在这个公司干了多少年，每年加了一定的薪资
+
+##### st12 《事业单位工作人员处分暂行规定》第十六条把（）建设作为事业单位工作人员队伍建设的一项重要任务（B）
+    A:行政管理
+    B:政治纪律
+    C:社会主义
+    D:群众监督
+    
+    看一下16条到20条的内容！
+
+##### st13 职业道德的具体功能有（ABC）
+    A:整合功能
+    B:导向功能
+    C:规范功能
+    D:协调功能
+    
+    有四条：还有激励功能
+
+##### st14 职业道德的特征（ABC）
+    A:鲜明的行业性：医德，师德
+    B:利益相关性：有利于促进行业的发展
+    C:表现形式的多样性：公司制度，标语，口号，公司纪律
+    D:应用效果上的不确定性
+
+##### st15 社会主义职业道德的特征（ABC）
+    A:继承性和创造性统一:以前有现在也有
+    B:阶级性和人民性统一
+    C:先进性和广泛性统一：党员的职业道德和普通人的不一样
+    D:强制性和被动性相统一：法律才有强制性
 
 
-##### st8 
+##### st16 文明礼让主要表现在（ABCD）
+    A:仪容端庄:不要穿的太脏，弄脏别人的衣服
+    B:待人和气
+    C:举止文明
+    D:恭谦礼让
 
+##### st17 事业单位的新进人员包括（BCD）
+    A:干部
+    B:工勤技能人员
+    C:专业技术人员
+    D:管理人员
 
-##### st8 
+##### st18 事业单位的年度考核工作领导小组由（ABD）组成
+    A:本单位负责人
+    B:组织人事和纪检监察部门有关人员
+    C:工会代表
+    D:工作人员代表
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-##### st6
+##### st19
     A:
     B:
     C:
     D:
 
-##### st7
-    A:
-    B:
-    C:
-    D:
-
-##### st8
-    A:
-    B:
-    C:
-    D:
-
-##### st9
+##### st20
     A:
     B:
     C:
