--- a/2-3主要实体法-第三节 民法-（一）物权.md
+++ b/2-3主要实体法-第三节 民法-（一）物权.md
@@ -34,5 +34,37 @@
     （2）社会公益或者法规政策理由
     （3）法律规定的特殊债权也可能优先于物权
 
+##### jcd56物权具有（ACD）特点
+    A:排他性
+    B:独占性
+    C:统一性
+    D:追及力
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    
 
     
