--- a/易混点/行政强制措施和行政强制执行和行政处罚.md
+++ b/易混点/行政强制措施和行政强制执行和行政处罚.md
@@ -31,6 +31,14 @@
         2．强制传唤；
         3．强制履行；
         4．遣送出境。
+    
+    《行政强制法》第十二条行政强制执行的方式：
+    （一）加处罚款或者滞纳金；
+    （二）划拨存款、汇款；
+    （三）拍卖或者依法处理查封、扣押的场所、设施或者财物；
+    （四）排除妨碍、恢复原状；
+    （五）代履行；
+    （六）其他强制执行方式        
 
 ### 行政处罚
 ### 行政处罚：【没得财务，我们暂时停掉生产】
@@ -208,9 +216,21 @@
     D:丁县
     
     行政处罚的地域管辖：行为实施地（违法行为和相关行为实施地）和结果发生地
-    
-    
 
+
+##### jcd51行政强制措施包括（ABCD）
+    A:查封场所
+    B:扣押财物
+    C:冻结汇款
+    D:限制公民人生自由    
+    
+##### jcd52行政强制执行的方式包括（ACD）
+    A:拍卖
+    B:罚款
+    C:代履行
+    D:排除妨碍
+    
+    行政强制执行：包括加处罚款和滞纳金，但是不是罚款，罚款是行政处罚
 
 
 
