--- a/行政法题.md
+++ b/行政法题.md
@@ -56,7 +56,7 @@
     《国务院关于加强市县政府依法行政的决定》
 
 
-##### jcd49我国《侵权责任法》中的民事权益包括（）
+##### jcd49我国《侵权责任法》中的民事权益包括（ABCD）
     A:健康权
     B:隐私权
     C:发现权
@@ -74,9 +74,17 @@
     C:误工费
     D:死亡赔偿金
 
+##### jcd53某公民在参与应急救援工作期间，有权享受（ABCD）
+    A:在本单位工资待遇不变
+    B:在本单位的福利不变
+    C:可以获得政府的奖励
+    D:可以获得政府的表彰
 
-
-
+##### jcd54公民法人或者其他组织可以采用（ABCD）等形式向各级人民政府，县级人民政府工作部门反映情况，提出建议，意见，或者投诉的请求，依法由有关行政机关处理的信访形式
+    A:口头
+    B:走访
+    C:传真
+    D:电子邮件
 
 
 
