--- a/法律题-2.md
+++ b/法律题-2.md
@@ -140,54 +140,13 @@
          
 
         
-    
-
-    
 
 
 
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-##### jcd65我国公司法所调整的公司类型包括（）
-    A:无限公司
-    B:两合公司
-    C:股份有限公司
-    D:有限责任公司
-
-##### jcd66股份有限公司设立的方式（）
-    A:发起设立
-    B:募集设立
-    C:登记设立
-    D:批准设立
-
-##### jcd67公司从事经营活动，必须（）
-    A:遵守行政规章
-    B:遵守社会公德
-    C:接受社会公众的监督
-    D:承担社会责任
-
-##### jcd68下列（）属于不正当竞争行为。
-    A:损害商业信誉
-    B:泄漏商业秘密
-    C:串通招投标
-    D:虚假宣传
-
-##### jcd69经济法的基本原则（）
+##### jcd69经济法的基本原则（BCD）
     A:平等自愿
     B:平衡协调原则
     C:维护公平竞争
