--- a/金标尺刷题/刷题-道德和事业单位条例.md
+++ b/金标尺刷题/刷题-道德和事业单位条例.md
@@ -103,32 +103,111 @@
     C:工会代表
     D:工作人员代表
 
-##### st19
+##### st19 关于法律和道德，正确的是（D）
+    A:在法律健全的社会不需要道德
+    B:....
+    C:在人类历史上，道德和法律同时产生
+    D:在一定条件下，道德和法律相互作用，相互转化
+    
+    道德是和人类生活公始终的，而法律是在一定社会制度上才有的。
+
+##### st20我国社会主义道德建设的核心（C）
+    A:诚实守信
+    B:办事公道
+    C:为人民服务
+    D:艰苦奋斗
+
+##### st21 社会主义职业道德的基本原则（C）
+    A:共产主义
+    B:集团主义
+    C:集体主义
+    D:全心全意为人民服务
+    
+    社会主义职业道德是是社会主义道德一部分：所以基本原则也是集体主义。
+
+##### st22下列，反映中国传统职业道德精华的内容的有（ABCD）
+    A:公忠为国的社会责任感:尽忠报国：军人的职业道德
+    B:恪尽职守的敬业精神
+    C:自强不息的拼搏精神
+    D:诚实守信的基本要求：卖东西不能欺骗别人
+
+##### st23事业单位工作人员订立的聘用合同期限发生争议的，可以提起人事仲裁（√）
+
+##### st23 初次就业的工作人员和事业单位订立的聘用合同在3年以上的，试用期为（A）
+    A:十二个月
+    B:六个月
+    C:一个月
+    D:三个月
+
+    考点：初次就业，3年以上
+    事业单位的合同类型：中期，长期，短期，项目合同
+
+##### st24警告，记过，降低岗位等级，或者撤职处分的，按照（D）由事业单位或者事业单位主管部门决定。
+    A:上级党组决议
+    B:纪检监察部门决定
+    C:本单位党组意见
+    D:干部人事管理权限
+    
+    如果是开除：事业单位主管部门
+
+
+##### st25 从业人员在职业工作中慎待诺言，表里如一，言行一致，遵守劳动纪律，这是职业道德中（C）
+    A:办事公道的基本要求：公正无私类
+    B:爱岗敬业的基本要求：良好的择业观，兢兢业业的工作
+    C:诚实守信的基本要求
+    D:服务群众的基本要求：文明服务，为群众服务
+    
+    表里如一，言行一致：说的就是要诚实，要守信用！
+
+##### st26 道德并不是生来就有的（√）
+    坐电梯排队是后天学来的。道德也是上层的建筑
+
+
+##### st27 事业单位岗位管理分为（A）个等级
+    A:10
+    B:8
+    C:6
+    D:4
+    
+    管理岗：10个等级名称
+    
+##### st28 根据相关规定，负有单位聘用，考核，奖励，处分，人事争议处理等职责的人员履行职责，应当回避的情形包括（ABD）
+    A:与本人有利害关系的
+    B:与本人近亲属有利害关系的
+    C:与本人单位有利害关系的：这个看起来正确，但是法条里面没有
+    D:其他可能影响公正履行职责的
+    
+##### st29社会主义公民道德建设的根本任务（D）
+    A:依法治国，以德治国
+    B:在全社会开展社会主义精神文明建设
+    C:在全社会树立建设共同理想，中国梦等
+    D:培养一代又一代的有理想，有文化，有纪律的社会主义公民
+
+##### st事业单位在用人单位发生人事争议，应当按照（A）等有关规定处理。
+    A:劳动争议调解仲裁法
+    B:劳动合同法
+    C:公务员法
+    D:民法通则
+
+
+
     A:
     B:
     C:
     D:
 
-##### st20
-    A:
-    B:
-    C:
-    D:
 
-##### st10
-    A:
-    B:
-    C:
-    D:
 
-##### st10
-    A:
-    B:
-    C:
-    D:
 
-##### st11
-    A:
-    B:
-    C:
-    D:
+
+
+
+
+
+
+
+
+
+
+
+
