--- a/2-3主要实体法-第四节 经济法-四、劳动法和社会保障法.md
+++ b/2-3主要实体法-第四节 经济法-四、劳动法和社会保障法.md
@@ -69,6 +69,12 @@
     C:用人单位破产的
     D:劳动者开始依法享受基本养老保险的
 
+##### jcd71劳动合同终止的情形包括（ABCDE）
+    A:劳动合同期满
+    B:用人单位被吊销营业执照，用人单位解散的
+    C:用人单位依法宣告破产
+    D:劳动者开始依法享受基本养老待遇
+    E:劳动者死亡，或者宣告死亡或者宣告失踪
 
 ### 6.劳动争议
     《劳动法》第 77 条规定：用人单位与劳动者发生劳动争议，当事人可以依法申请调解、
@@ -109,7 +115,11 @@
     C:用人单位与劳动者约定保密事项的
     D:用人单位未依法为劳动者缴纳社会保险费的    
 
-
+##### jcd72职工有（ABD）情形，视同工伤
+    A:在工作时间和工作岗位，突发疾病或者48小时内抢救无效死亡的
+    B:职工在抢险救灾中受到伤害的
+    C:在上下班途中，受到城市轨道交通，客运轮渡，或者事故伤害的
+    D:职工原在军队服役，因战，因公负伤致残，已取得革命伤残军人证，在用人单位后旧伤复发的
 
 
 
