--- a/易混点/法律责任原则，执法原则，行政法原则，司法原则，立法原则，行政诉讼原则，经济法原则，劳动合同原则.md
+++ b/易混点/法律责任原则，执法原则，行政法原则，司法原则，立法原则，行政诉讼原则，经济法原则，劳动合同原则.md
@@ -58,7 +58,17 @@
     D:禁止权利滥用原则
 
 
+##### jcd69经济法的基本原则（BCD）
+    A:平等自愿
+    B:平衡协调原则
+    C:维护公平竞争
+    D:责权利相统一
 
+##### jcd70订立劳动合同，应当遵循（AD）等原则
+    A:合法
+    B:自由
+    C:公正
+    D:诚实
 
 
 
