--- a/综合基础/金标尺复习题勘误/复习题勘误-法律题-判断.md
+++ b/综合基础/金标尺复习题勘误/复习题勘误-法律题-判断.md
@@ -72,7 +72,8 @@
 
 ##### jcp37. 消费者在为生活消费需要购买，使用商品或者接受服务时，享依法结社权。（）
 
-##### jcp38. 甲借用乙的小车，先甲破产，则乙对该小车享有优先受偿权（）
+##### jcp38. 甲借用乙的小车，先甲破产，则乙对该小车享有优先受偿权（×）
+        本来就是乙的东西，只是取回而已
 
 ##### jcp39. 劳动合同3个月以上不满1年的，试用期不得超过1个月（）
 
