'法律第一阶段完成'

--- a/综合基础/2-1法理学-一、法的概念和基本特征.md
+++ b/综合基础/2-1法理学-一、法的概念和基本特征.md
@@ -27,6 +27,12 @@
     【其他社会规范并不都是将权利和义务相对应】。法律的主要内容是【规定人们权利和义务】，
     通过对人们权利和义务的配置和运作，影响他们的行为动机，指导他们的行为，借以调整社会关系。
     
+##### jcp3. 法以权力和义务双向规定为调整机制（√）
+
+##### jcp6. 法律对社会关系的调整是通过强制和惩罚来实现的（×）
+    通过对人们权利和义务的配置和运作，影响他们的行为动机，指导他们的行为，借以调整社会关系。
+    
+    
 ### 4.法由国家强制力保证实施。
     法是统治阶级的意志，直接表现为国家意志，对法的违犯，表现为对国家意志的挑战，
     因此对违法者，【必须以国家的名义予以制裁】。这种制裁，表现为一种强制性的制裁，而不以
