--- a/综合基础/2-1法理学-三、法律关系.md
+++ b/综合基础/2-1法理学-三、法律关系.md
@@ -87,6 +87,8 @@
     依是否以人们的意志为转移作标准，可以将法律事实大体上分为两类，即法律事件和法
     律行为。
 
+##### jcp4. 法律事实时法律规范与法律关系的中介（√）
+
 ####（1）法律事件
     
     法律事件是法律规范规定的、不以当事人的意志为转移而引起法律关系形成、变更或消灭的客观事实。
