--- a/综合基础/2-3主要实体法-第三节 民法-二、人身权包括（人格权和身份权）.md
+++ b/综合基础/2-3主要实体法-第三节 民法-二、人身权包括（人格权和身份权）.md
@@ -27,6 +27,14 @@
     （8）隐私权，指自然人享有的以其个人生活自由为内容的个人秘密利益和其对自己的
     私人活动的支配权利。
 
+##### jcp21. 法人不享有人格权（×）
+    法人享有名称权，名称权属于人格权
+
+##### jcp22. 法人也有肖像权（×）
+    公民才享有肖像权
+
+
+
 ### 2.身份权
     身份权，是指民事主体基于特定的身份而享有的维护一定社会地位和社会关系的权利。
     身份权具体包括以下几类：
