--- a/综合基础/2-3主要实体法-第三节 民法-（一）物权.md
+++ b/综合基础/2-3主要实体法-第三节 民法-（一）物权.md
@@ -41,6 +41,20 @@
     D:追及力
 
 
+##### jcp25. 共有人对共有的不动产或者动产共同享有所有权（×）
+    《物权法》
+    第九十四条　按份共有人对共有的不动产或者动产按照其份额享有所有权。
+    第九十五条　共同共有人对共有的不动产或者动产共同享有所有权。
+
+##### jcp26. 业主对建筑物专有部分以外的共有部分，可以放弃权利不履行义务（×）
+    《物权法》
+    第七十二条　业主对建筑物专有部分以外的共有部分，享有权利，承担义务；不得以放弃权利不履行义务。
+    业主转让建筑物内的住宅、经营性用房，其对共有部分享有的共有和共同管理的权利一并转让。
+
+##### jcp27. 物权包括所有权，用益物权，担保物权（√）
+
+
+
 
 
 
