--- a/综合基础/2-3主要实体法-第三节 民法-（二）知识产权【著商现明科 专利权】.md
+++ b/综合基础/2-3主要实体法-第三节 民法-（二）知识产权【著商现明科 专利权】.md
@@ -84,6 +84,12 @@
     注意： 对前款第（四）项所列产品的生产方法，可以依照本法规定授予专利权
             也就是说：植物品种的生产方法可以申请专利权。
 
+##### jcp33. 作者的署名权，修改权，保护作品完整权的保护期不受限制（√）
+    其他的是作者终身以及死后50年
+    
+##### jcp34. 在我国，专利申请权可以转让（√）
+    《专利法》
+    第十条 专利申请权和专利权可以转让。
 
 
 
