--- a/综合基础/宪法题.md
+++ b/综合基础/宪法题.md
@@ -23,7 +23,12 @@
     
 ##### dz20 成文宪法的缺点是适应差，不容易顺应复杂多变的政治环境和社会发展（√）
 
+##### jcp10. 英国的宪法既是不成文宪法，也是柔性宪法（√）
+    
+##### jcp11. 世界上最古老并仍然生效的钦定宪法是1814年制定的挪威王国宪法（√）
 
+##### jcp12. 及我国在1998年，1992年，1999年，2004年对1982年宪法典进行了4次修改（×）
+    第二次修改是1993年
 
 
 
