--- a/综合基础/金标尺复习题勘误/复习题勘误-法律题-多选.md
+++ b/综合基础/金标尺复习题勘误/复习题勘误-法律题-多选.md
@@ -308,31 +308,15 @@
 
 
 
-##### jcd96在民事诉讼中，原告提起诉讼必须具备的条件是（）
+##### jcd96在民事诉讼中，原告提起诉讼必须具备的条件是（ABCD）
     A:与本案有直接利害关系
     B:有明确的被告
     C:有具体的诉讼请求
     D:属于人民法院的受案范围
 
-##### jcd97有关民事诉讼中管辖的说法，正确的有（）
-    A:中级人民法院管辖在本辖区有重大影响的第一审民事案件
-    B:对法人提起的民事诉讼，由原告住所地人民法院管辖
-    C:同一诉讼的几个被告住所地在两个以上人民法院辖区的，各人民法院都有管辖权
-    D:因合同纠纷提起的诉讼，由被告住索敌或者合同履行地人民法院管辖
 
-##### jcd98下列有关民事诉讼中期限的表述，正确的有（）
-    A:人民法院收到起诉状后，认为不符合起诉条件的，应在7日内裁定不予受理
-    B:人民法院审理民事案件，应当在3日前通知当事人和其他诉讼参与人
-    C:人民法院受理宣告失踪案件，宣告失踪的公告期间为一个月
-    D:当事人不服地方人民法院第一审裁定的，有权在裁定书送达起10日内向上一级人民法院上诉
-    
-##### jcd99下列有关民事诉讼中，简易程序的表述，正确的有（）
-    A:基层人民法院派出的法庭在审理事实清楚，权利义务关系明确，争议不大的简单民事案件可以适用简易程序
-    B:即使是简单的民事案件，原告也应书面起诉
-    C:可以用简便的方式随时传唤当事人
-    D:可由审判员一人独任审判
 
-##### jcd100 在民事执行中，（）不能作为执行客体
+##### jcd100 在民事执行中，（ABCD）不能作为执行客体
     A:被申请人
     B:国家限制流通的物品
     C:被执行人及其所抚养家属的生活必需品
