--- a/综合基础/易混点/中级人民法院审理的第一审案件.md
+++ b/综合基础/易混点/中级人民法院审理的第一审案件.md
@@ -24,7 +24,11 @@
     （三）本辖区内重大、复杂的案件。
     （四）其他法律规定由中级人民法院管辖的案件。
 
-
+##### jcd97有关民事诉讼中管辖的说法，正确的有（ACD）
+    A:中级人民法院管辖在本辖区有重大影响的第一审民事案件
+    B:对法人提起的民事诉讼，由原告住所地人民法院管辖
+    C:同一诉讼的几个被告住所地在两个以上人民法院辖区的，各人民法院都有管辖权
+    D:因合同纠纷提起的诉讼，由被告住所地或者合同履行地人民法院管辖
 
 
 
