--- a/综合基础/金标尺复习题勘误/复习题勘误-法律题-判断.md
+++ b/综合基础/金标尺复习题勘误/复习题勘误-法律题-判断.md
@@ -1,103 +1,78 @@
-##### jcp1.法调整人的思想（）
+##### jcp1.法调整人的思想（×）
+    法律只调整人的行为，不调整人的思想
 
-##### jcp2. 法律行为不包括不作为（）
+##### jcp2. 法律行为不包括不作为（√）
 
-##### jcp3. 法以权力和义务双向规定为调整机制（）
+##### jcp5. 上级监察机关可以办理下一级监察机关管辖范围内的监察事项（√）
 
-##### jcp4. 法律事实时法律规范与法律关系的中介（）
+##### jcp7. 我国行政法和刑法，民法一样，有一部系统，完整，统一的法典（×）
+    我国只有刑法典，没有行政法典，也没有民法典，行政法和民法是由很多部法律构成的
 
-##### jcp5. 上级监察机关可以办理下一级监察机关管辖范围内的监察事项（）
+##### jcp8. 最高人民法院指导地方各级人民法院和专门人民法院的审判工作（×）
+    上级人民法院监督下级人民法院的工作
 
-##### jcp6. 法律对社会关系的调整是通过强制和惩罚来实现的（）
+##### jcp9. 社会主义国家都应采用单一制的国家结构形式（×）
+    一般而言，当今世界主要有两种国家结构形式，即单一制和联邦制
+    和国家结构形式与国家性质，没有直接必然的关系
+    
+##### jcp13. 依法被剥夺政治权利的人不属于人民（√）
 
-##### jcp7. 我国行政法和刑法，民法一样，有一部系统，完整，统一的法典（）
+##### jcp14. 刑法是其他法律的保障法（√）
 
-##### jcp8. 最高人民法院指导地方各级人民法院和专门人民法院的审判工作（）
+##### jcp15. 甲刚满15周岁，过失杀人，应负刑事责任（√）
 
-##### jcp9. 社会主义国家都应采用单一制的国家结构形式（）
+##### jcp18. 除食品安全标准外，不得制定其他的食品强制性标准（√）
+    《食品安全法》
+    第二十五条　食品安全标准是强制执行的标准。除食品安全标准外，不得制定其他食品强制性标准。
 
-##### jcp10. 英国的宪法既是不成文宪法，也是柔性宪法（）
+##### jcp20. 食品校验实行食品检验机构负责制（×）
+    实行：食品校验机构和检验人负责制
 
-##### jcp11. 世界上最古老并仍然生效的钦定宪法是1814年制定的挪威王国宪法（）
+##### jcp23. 业主大会或者业主委员会的决定，对业主不具有约束力（×）
 
-##### jcp12. 及我国在1998年，1992年，1999年，2004年对1982年宪法典进行了4次修改（）
+##### jcp29. 国家对社会保险基金实行严格监管（√）
 
-##### jcp13. 依法被剥夺政治权利的人不属于人民（）
+##### jcp30. 法人的民事行为能力先于民事权利能力（×）
+    法人的民事行为能力,民事权利能力同时产生和消灭
 
-##### jcp14. 刑法是其他法律的保障法（）
+##### jcp32. 省级工商行政管理部门主管各省商标注册和管理工作（×）
+    《商标法》
+    第二条 国务院工商行政管理部门商标局主管全国商标注册和管理的工作。
+    国务院工商行政管理部门设立商标评审委员会，负责处理商标争议事宜。
+    商标一般是全国通用的。所以统一由国务院来处理
 
-##### jcp15. 甲刚满15周岁，过失杀人，应负刑事责任（）
 
-##### jcp16. 违法事实确凿并有法定依据，对公民出100元以下的罚款的，可以当场作出行政处罚决定（）
+##### jcp36. 合同的书面形式包括电子邮件（√）
 
-##### jcp17. 行政复议申请人向复议机关申请复议，复议机关已经受理的，在法定复议期限内，不能向人民法院起诉（）
-
-##### jcp18. 除食品安全标准外，不得制定其他的食品强制性标准（）
-
-##### jcp19. 食品原料，食品添加剂，食品相关产品进货查验记录保存期限不得少于1年（）
-
-##### jcp20. 食品校验实行食品检验机构负责制（）
-
-##### jcp21. 法人不享有人格权（）
-
-##### jcp22. 法人也有肖像权（）
-
-##### jcp23. 业主大会或者业主委员会的决定，对业主不具有约束力（）
-
-##### jcp24. 公证遗嘱不得变更和撤销（）
-
-##### jcp25. 共有人对共有的不动产或者动产共同享有所有权（）
-
-##### jcp26. 业主对建筑物专有部分以外的共有部分，可以放弃权利不履行义务（）
-
-##### jcp27. 物权包括所有权，用益物权，担保物权（）
-
-##### jcp28. 无线电频谱资源属于国家所有（）
-
-##### jcp29. 国家对社会保险基金实行严格监管（）
-
-##### jcp30. 法人的民事行为能力先于民事权利能力（）
-
-##### jcp31. 每次续展商标注册的有效期为5年（）
-
-##### jcp32. 省级工商行政管理部门主管各省商标注册和管理工作（）
-
-##### jcp33. 作者的署名权，修改权，保护作品完整权的保护期不受限制（）
-
-##### jcp34. 在我国，专利申请权可以转让（）
-
-##### jcp35. 在我国，发明专利的期限为20年，自批准之日起计算（）
-
-##### jcp36. 合同的书面形式包括电子邮件（）
-
-##### jcp37. 消费者在为生活消费需要购买，使用商品或者接受服务时，享依法结社权。（）
+##### jcp37. 消费者在为生活消费需要购买，使用商品或者接受服务时，享依法结社权。（√）
 
 ##### jcp38. 甲借用乙的小车，先甲破产，则乙对该小车享有优先受偿权（×）
-        本来就是乙的东西，只是取回而已
+        本来就是乙的东西，只是取回而已，所以并不是优先受偿权
+        
+        《企业破产法》
+        第七十六条　债务人合法占有的他人财产，该财产的权利人在重整期间要求取回的，应当符合事先约定的条件。
 
-##### jcp39. 劳动合同3个月以上不满1年的，试用期不得超过1个月（）
 
-##### jcp40. 在我国，分公司具有法人资格，子公司不具有法人资格。（）
+##### jcp45. 人民法院对行政案件宣告判决或者裁定前，原告申请撤诉的，人民法院应准许撤诉。（×）
+    《行政诉讼法》
+    第六十二条　人民法院对行政案件宣告判决或者裁定前，原告申请撤诉的，或者被告改变其所作的行政行为，原告同意并申请撤诉的，是否准许，由人民法院裁定
+    
 
-##### jcp41. 依我国公司法规定设立的股份有限公司，可以在公司名称标明“有限公司”字样（）
+##### jcp46. 犯罪嫌疑人在侦查期间，可以委托亲友作为辩护人（×）
+    公诉案件：自侦查机关第一次讯问或者采取强制措施之日起，可以委托律师或者其他辩护人（侦查期间只能委托律师）
+    自诉案件：有权随时委托辩护人
 
-##### jcp42. 有限责任公司50个以下的股东出资设立。（）
+##### jcp48. 被拘留人和他人的来往信件不受检查和扣押（√）
+    《拘留所条例》
+    第二十五条拘留所保障被拘留人在拘留期间的通信权利，被拘留人与他人的来往信件不受检查和扣押。被拘留人应当遵守拘留所的通信管理规定。
 
-##### jcp43. 有限合伙企业由有限合伙人组成（）
 
-##### jcp44. 死刑一律由最高人民法院核准（）
-
-##### jcp45. 人民法院对行政案件宣告判决或者裁定前，原告申请撤诉的，人民法院应准许撤诉。（）
-
-##### jcp46. 犯罪嫌疑人在侦查期间，可以委托亲友作为辩护人（）
-
-##### jcp47. 人民检察院提出抗诉的案件，人民法院应当再审（）
-
-##### jcp48. 被拘留人和他人的来往信件不受检查和扣押（）
-
-##### jcp49. 指定居所监视居住的期限不能抵押刑期（）
-
-##### jcp50. 侦查人员在审讯犯罪嫌疑人的时候，应当对审讯过程进行录音或者录像（）
+##### jcp50. 侦查人员在审讯犯罪嫌疑人的时候，应当对审讯过程进行录音或者录像（×）
+    查人员在审讯犯罪嫌疑人的时候，``可以``对审讯过程进行录音或者录像
+    对可能判处有期徒刑，死刑的案件或者其他重大犯罪案件，``应当``对讯问过程录音或者录像
+    
+    录音或者录像应当全程进行，保持完整性
+    
 
 ##### jcp51. 
 
