--- a/综合基础/金标尺复习题勘误/复习题勘误-公文题-单选.md
+++ b/综合基础/金标尺复习题勘误/复习题勘误-公文题-单选.md
@@ -64,67 +64,67 @@
     C:同级机关
     D:业务主管
 
-##### jc-12
-    A:
-    B:
-    C:
-    D:
+##### jc-12下级机关的请示事项，如需要本机关名义向上级机关请示，应当提出（）
+    A:建设性意见
+    B:倾向性意见
+    C:具体性建议
+    D:可行性建议
 
-##### jc-13
-    A:
-    B:
-    C:
-    D:
+##### jc-13《党政机关公文处理工作条例》增加了（）和公报，同时将会议纪要改为纪要（）
+    A:决议
+    B:条例
+    C:指示
+    D:规定
 
-##### jc-14
-    A:
-    B:
-    C:
-    D:
+##### jc-14以强制力推行的用以规定各种行为的法规，规章同于（）
+    A:规范性文件
+    B:领导指导性文件
+    C:呈请性文件
+    D:证明性文件
 
-##### jc-15
-    A:
-    B:
-    C:
-    D:
+##### jc-15供受文者使用的具有法定效力的正式文本，格式规范并具备各种生效标志的稿本 称作（）
+    A:草稿
+    B:定稿
+    C:正本
+    D:副本
 
-##### jc-16
-    A:
-    B:
-    C:
-    D:
+##### jc-16国家民政部和各省，直辖市，自治区民政厅（局）属于（）
+    A:指导关系
+    B:隶属关系
+    C:不相隶属关系
+    D:平行关系
 
-##### jc-17
-    A:
-    B:
-    C:
-    D:
+##### jc-17请示可以直接交给上级机关负责人个人的是（）
+    A:上级机关负责人直接交办的事项
+    B:与领导人直接相关的事项
+    C:重要文件
+    D:机密文件
 
-##### jc-18
-    A:
-    B:
-    C:
-    D:
+##### jc-18接受请示的机关应对请示事项表明是否批准的态度或予以明确的指示。这句话反映了请示具有何种特性（）
+    A:欺复性
+    B:针对性
+    C:强制回复性
+    D:单一性
 
-##### jc-19
-    A:
-    B:
-    C:
-    D:
+##### jc-19两个或者两个以上机关联合行文时，必须做好（）工作
+    A:审核
+    B:签发
+    C:签署
+    D:会签
 
-##### jc-20
-    A:
-    B:
-    C:
-    D:
+##### jc-20行文应当确有必要，（）注意针对性和可操作性
+    A:领导决定
+    B:讲究实效
+    C:强调准确
+    D:安全保密
 
-##### jc-21
-    A:
-    B:
-    C:
-    D:
+##### jc-21引用公文应当（）
+    A:先引发文字号，后引标题
+    B:先引标题，后引发文字号
+    C:只引发文字号
+    D:只引标题
 
-##### jc-22
+##### jc-22下列关于关公管理规定，错误的是（）
     A:
     B:
     C:
