--- a/综合基础/金标尺复习题勘误/复习题勘误-公文题-单选.md
+++ b/综合基础/金标尺复习题勘误/复习题勘误-公文题-单选.md
@@ -125,183 +125,554 @@
     D:只引标题
 
 ##### jc-22下列关于关公管理规定，错误的是（）
-    A:
-    B:
-    C:
-    D:
+    A:公文复印件作为正式公文使用时，应加盖复制机关印章
+    B:公文被撤销的，视为自始无效
+    C:公文被废止的，视为自废止之日起无效
+    D:不具备归档和保存价值的公文，经鉴别后可以销毁
 
-##### jc-23
-    A:
-    B:
-    C:
-    D:
+##### jc-23适用于公布重要决定或者重大事项，应用（）
+    A:公告
+    B:公报
+    C:通告
+    D:通报
 
-##### jc-24
-    A:
-    B:
-    C:
-    D:
+##### jc-24对重要问题提出见解和处理办法，应用（）
+    A:决议
+    B:决定
+    C:意见
+    D:命令
 
-##### jc-25
-    A:
-    B:
-    C:
-    D:
-
-##### jc-26
-    A:
-    B:
-    C:
-    D:
-
-##### jc-27
-    A:
-    B:
-    C:
-    D:
-
-##### jc-28
-    A:
-    B:
-    C:
-    D:
-
-##### jc-29
-    A:
-    B:
-    C:
-    D:
-
-##### jc-30
-    A:
-    B:
-    C:
-    D:
-
-##### jc-31
-    A:
-    B:
-    C:
-    D:
-
-##### jc-32
-    A:
-    B:
-    C:
-    D:
-
-##### jc-33
-    A:
-    B:
-    C:
-    D:
-
-##### jc-34
-    A:
-    B:
-    C:
-    D:
-
-##### jc-35
-    A:
-    B:
-    C:
-    D:
+##### jc-25应当标注签发人姓名的公文时（）
+    A:下行文
+    B:平行文
+    C:上行文
+    D:所有公文
+    
+##### jc-26.新设立的机关应当向()党委、政府的办公厅(室)提出发文立户申请。（）
+    A上级
+    B本级
+    C.下级
+    D.不相隶属机关
 
 
-##### jc-36
-    A:
-    B:
-    C:
-    D:
+##### jc-27公文在传达党和国家的路线方针政策、法律法规,实施领导与管理的重要特征是
+    A.法定性
+    B.政治性
+    C.时效性
+    D.规范性
 
 
-##### jc-37
-    A:
-    B:
-    C:
-    D:
+##### jc-28.按通常划分,总结这一文种属于()
+    A.行政公文
+    B.党的公文
+    C.专用文书
+    D事务文书
+ 
+##### jc-29公文的作者以什么名义才可以制发公文()
+    A.法人代表的名义
+    B.国家公民的名义
+    C.机关的名义或其负责人的名义
+    D.其他社会组织与个体结合的名义
+
+##### jc-30.规章制度类文书正文表达的基本单位是()
+    A.章
+    B:节
+    C.条
+    D.款
+
+##### jc-31.会议通知的繁简程度,应视()而定。
+    A.会议内容与规模
+    B.会议的重要性大小
+    C.会议的广泛性大小
+    D.会议的地点
+
+##### jc-32为了维护正常的领导、指导关系,具有隶属关系或业务指导关系的机关之间应基本采取（）
+    A.逐级行文
+    B.多级行文
+    C.越级行文
+    D.直接行文
+
+##### jc-33.公文中的成文日期应写为()
+    A.13年6月18日
+    B.一三年六月十八日
+    C.2013年6月18日
+    D.二0一三年六月十八日
+
+##### jc-34紧急公文或者重要公文应当由()负责催办。
+    A机关负责人
+    B.专人
+    C.办公厅(室)负责人
+    D.文秘人员
+
+##### jc-35某单位准备将前一阶段开展基层组织建设年活动情况发一个通报,应选用()
+    A.表扬通报
+    B.批评通报
+    C.情况通报
+    D.奖惩通报
+
+##### jc-36.印发类通知是指印发()的文件。
+    A.上级机关
+    B.下级机关
+    C.平级机关
+    D.本机关
+
+##### jc-37.可以平行也可以下行的公文是()
+    A.通知
+    B.决定
+    C.报告
+    D.批复
+
+##### jc-38.下列公文格式项目中,()属指定性格式项目。
+    A.签发人
+    B.标题
+    C.秘密等级
+    D.附件
+
+##### jc-39联合行文,公文的成文日期以()为准
+    A.第一个发文机关负责人签发的日期
+    B.最后一个签发机关负责人签发的日期
+    C.公文印发的日期
+    D.会议通过的日期
 
 
-##### jc-38
-    A:
-    B:
-    C:
-    D:
+##### jc-40.()是公文主旨经常使用的表现方法。
+    A.文中点题
+    B.开篇点题
+    C.标题点题
+    D篇末点题
+
+##### jc-41()是公文作者合法性和公文效力的标志
+    A.发文机关标志
+    B.发文字号
+    C.印章
+    D.发文机关署名
+
+##### jc-42.业务主管部门的
+    一经上级机关批转,对受文单位都有行政约束力。
+    A.命令(令)
+    B.决定
+    C.决议
+    D.意见
+    
+##### jc-43.指挥性公文是()
+    A.下行文
+    B.上行文
+    C.平行文
+    D.上下平均可
 
 
-##### jc-39
-    A:
-    B:
-    C:
-    D:
+##### jc-44.立卷的文件是已经办理完毕的。立卷的作用主要是为了()
+    A.反映本机关的活动
+    B.便于检索和管理
+    C.便关工作的
+    D 便于研究有关问题
+##### jc-45.()是指对收文如何办理提出建议性处理意见
+    A.拟办
+    B.承办
+    C.批办
+    D.注办
+    
+##### jc-46.下列选项中属公文表态用语的是()
+    A.遵照、依照、兹有、兹因
+    B.欣悉、敬悉、据报、据查
+    C.同意、照办、可行、拟同意
+    D.恭请、敬请、承蒙、不胜荣幸
+    
+##### jc-47.公文的主旨体现了机关领导意图和发文目的,它是()
+    A.公文的具体要求
+    B.公文的中心内容
+    C.公文的重要事项
+    D.公文的灵魂和统帅
+##### jc-48.中国人民银行就关于国家货币出人境限额问题发文,宜用
+    A决定
+    B.决议
+    C.通知
+    D.公告
+##### jc-49某单位因施工需要,须砍伐单位内的几株梧桐树,在给所在街道办事处绿化办公室行文时,宜用()
+    A.请示
+    B.报告
+    C.通知
+    D.函
+    
+##### jc-50.中共xx市委号召全市党员向英雄xx同志学习,应向()行
+    A.全市各行政机关
+    B.全市各区县政府
+    C.市政府各部委办
+    D.下级党的机关
+    
+##### jc-51.根据行文规则,对不符合行文规则的上报公文,上级机关的秘书部门()退回下级呈报机关。
+    A.有权
+    B 无权
+    C.经请示本级机关领导后才能
+    D.不能
+    
+##### jc-52收文办理中的“批办”指的是(
+    A.机关或部门领导人对文件予以签发
+    B.由职能部门或有关工作人员具体承接办理公文内容所涉事务和问题
+    C.由职能部门或有关工作人员草拟意见后送机关或部门领导人审批
+    D 机关或部门领导人对来文提出决断性的处置原则和方法
+##### jc-53.“2012年11月14日中国共产党第十八次全国代表大会通过”是一篇决议,通过的时间和会议名称应写在()
+    A标题下方并加圆括号
+    B.正文开头处
+    C.正文结尾处
+    D.落款处
+    
+##### jc-54.利用公文表彩先进,是公文什么作用的体现()
+    A.凭证依据作用
+    B.宣传教育作用
+    C.处理公务作用
+    D.规范言行作用
+    
+##### jc-55.()是按照公文内容的处理要求进行分类的。
+    A.法规性公文
+    B.对外公开公文
+    C.承办性公文
+    D.收进公文
+    
+##### jc-56.下列公文中,()必须写明主送机关。
+    A.决定
+    B.决议
+    C.报告
+    D.纪要
+    
+##### jc-57公文语言的第一要素是(
+    A 庄重
+    B.简明
+    C.准确
+    D朴实
+    
+##### jc-58下面公文写作中不恰当的是
+    A我们一定要严厉打击腐败分子,把反腐败进行到底
+    B.以上意见如无不当,着即批转各有关单位认真遵照执行
+    C我们必须排除种种不利因素,争取在第一季度建成东方贸易商厦
+    D.玻璃制品厂原党委书记张某一伙,几年来大量贪污盗窃、行贿送礼,其中仅
+    行贿一项即达85000元
+    
+##### jc-59.向非同一组织系统的任何机关发送的文件属于()
+    A.上行文
+    B.平行文
+    C.下行文
+    D.越级行文
+    
+##### jc-60.下列表述中不能用于公文数量表达的是()
+    A.减少了2倍
+    B.两万五千里长征
+    C: 减少了50%
+    D.一式四份
+    
+##### jc-61.下面说法正确的是（）
+    A.党政机关应在各自的系统内部发布文件
+    B.党的机关可直接向行政部门发布指示性文件
+    C.行政机关可直接向党的机关呈送报请性文件
+    D.党政机关应尽可能地增加联合行文
+    
+##### jc-62.下列关于公告与通告的区别表述错误的是()
+    A.从知照范围看,公告面向国内外,而通告则只面向一定辖区范围的群众
+    B.从性质上看,公告内容属重要事项或法定事项,重在知照性;通告内容专业性
+    较强,或宣布行政措施,或告知具体事务,兼有知照和约束的性质
+    C.从发布方式看,公告一般通过新闻媒体发布,通告则采用在相关地区张贴或
+    登报、广播的方式
+    D.从公文类型上看,公告属于法定公文,通告属于事务文书
+    
+##### jc-63.新的规范性公文产生了,对同一事物约束、规范的旧文件应()
+    A 两法并有
+    B.新不废旧
+    C.相辅相成
+    D.废止旧法
+
+##### jc-64.撰写《关于调整用电收费标准的报告》时,不符合写作要求的是()
+    A由于需呈请上级机关予以批转,所以在报告结尾提出请求批转的要求
+    B.中心明确,重点突出。为不使报告空泛平淡,避免报告出现面面供到的情况
+    C 报告内容应反映新形势下的新事物,新问题,使报告内容具有信息价值
+    D.报告中要求批准xx省四个县的收费标准要求
+
+##### jc-65.国务院行文对一些地区和单位违反有关规定进行集资的行为进行了批评,并作出处理,同时提出了有关要求。这份文件的文种应是()
+    A.通知
+    B.通报
+    C.通告
+    D.意见
+##### jc-66.下列发文字号中,()是正确的
+    A.国发(2012)1号
+    B.国发[2012]第1号
+    C.国发[2012]01号
+    D.国发[2012]1号
+    
+##### jc-67就公文内容的性质与作用而言,公报、公告、通告属()一
+    A.指挥性公文
+    B.知照性公文
+    C.报请性公文
+    D.记录性公文
+    
+##### jc-68.《重庆市广播电视局关于向南岸区国土资源和房屋管理局申请划拨建设电视转播台用地的请示》,该标题主要的错误是()
+    A.违反报告不得夹带请示的规定
+    B.违反应协商同意后再发文的规定
+    C.错误使用文种,应使用函
+    D错误使用文种,应使用报告
+    
+##### jc-69.下列公文中,()属于公文“请示”的结束语。
+    A.特此函达。
+    B.此致,敬礼
+    C.当否,请指示
+    D.请尽快办理。
+    
+##### jc-70.下列哪个事由,根据《党政机关公文处理工作条例》,不可以使用“决定”（）
+    A.严惩严重破坏社会治安的犯罪分子的工作安排
+    B.大兴安岭森林特大火灾事故的处理
+    C.授予xXx全国劳动模范的称号的嘉奖
+    D.在太平洋x地区试验运载火箭,使过往船只周知
+    
+##### jc-71 简报的正文常用消息报道式,其格式是()
+    A.报头、报身、报尾
+    B.导语、背景、主体
+    C 导语  主体 结尾
+    D.开头、导语、主体
+    
+##### jc-72在正文结束时使用“散会”二字的文书是()
+    A 纪要
+    B.会议记录
+    C.简报
+    D.述职报告
+
+##### jc-73述职报告主要以()的方式进行公布
+    A.行文
+    B.张贴
+    C.宣读
+    D.媒体
+    
+##### jc-74.下面不属于规章制度类文书的是()
+    A.办法
+    B.条例
+    C 计划
+    D 规定
+    
+##### jc-75在重大节日、喜庆仪式、隆重典礼、重大活动成功或胜利时,用来表示祝贺的礼仪性文书是()
+    A.感谢信
+    B.贺词
+    C.慰问信
+    D.启事
+
+##### jc-76.公文《xx大学关于表彰张三同志的决定》的作者是()
+    A.签发该公文的校长
+    B.起草该公文的刘秘书
+    C.张三
+    D.xx大学
+
+##### jc-77公文上的签署是指(
+    A.机关领导人在公文完成稿上的亲笔签名,标志文稿形成,并可以此作为印发
+    正本的依据
+    B.以机关领导人名义发文时,签发公文的领导人亲笔在公文正本落款处签注的
+    职务、姓名
+    C.由机关领导人在收文上签注的批示性处置意见
+    D.由承办公文的机关工作人员在处理完毕的公文上签注的对该文承办的经过与
+    结果的说明
+
+##### jc-78.下列不属于工作计划的主体内容的是()
+    A.任务和目标
+    B.步骤与措施
+    C 指导思想
+    D.不足与问题
+
+##### jc-79.写总结的主要目的是
+    A.回顾工作成绩,树立今后工作的信心。
+    B.找出经验或教训,总结工作规律
+    C.找出工作问题,以利解决存在的问题
+    D.详细记载工作历程,存档备查。
+
+##### jc-80.由机关领导对发文稿批注核准发出的意见并签署姓名及日期的活动,是发文处理中的（）
+    A.会商
+    B.审核
+    C.注发
+    D.签发
+
+##### jc-81.公文结构层次标注规范的是(）
+    A 一、1.(一)(1)
+    B.(一)一、1.(1)
+    C.一、(一)1.(1)
+    D.1.(1)一、(一)
+
+##### jc-82根据内容涉及国家秘密的程度,含有重要的国家秘密,泄露会使国家的安全和利遭受严重损害的文件属于()
+    A.内部使用文件
+    B.秘密文件
+    C.机密文件
+    D.绝密文件
+    
+##### jc-83.计划的灵魂和总纲是()
+    A.前言
+    B.任务和目标
+    C 步骤和措施
+    D.标题
+
+##### jc-84.下列各句中表意明确、没有歧义的一句是()
+    A.一踏进办公室,就看见几个工厂的负责人正焦急地等着他
+    B.我第一次见到他时,也不过才八九岁,如今已长成大人了
+    C.世界上的许多大学,正利用信息技术频繁地开展学术交流和国际合作。
+    D.他高兴地告诉我,学校已发来通知,要他九月十日前去学校报到
+
+##### jc-85.撰写《关于审批第三批国家历史文化名城和加强保护管理的请示》一文时,符合撰写要求的说法是(）
+    A.应正确标注主送机关与抄送机关
+    B 一般应直接报送领导者个人
+    C.适宜采用概括叙述的表达方式,避免描述事情的细枝末节或罗列数字
+    D.可同时要求对历史文化名城周边的自然风景区加以保护管理
+
+##### jc-86.根据文件来源,在一个机关内部可将公文分为()
+    A.收文、发文
+    B.上行文、平行文、下行文
+    C通用公文、专业公文
+    D.党的公文、行政公文、其他组织公文
+
+##### jc-87狭义的公文是指()
+    A.事务文书
+    B.司法文书
+    C 法定公文(党政公文)
+    D.专用文书
+
+##### jc-88公文最基本的作用是()作用
+    A.领导指导
+    B.处理公务
+    C.凭证依据
+    D.宣传教育
+
+##### jc-89.《中共中央关于印发《中国共产党纪律处分条例(试行》的通知》是(）
+    A 发布性通知
+    B.转发性通知
+    C.指示性通知
+    D 批转性通知
+
+##### jc-90.()是机关应用文使用频率最高、最通用的内在模式
+    A.断一事一析
+    B.凭一事一断
+    C.析一事断
+    D事一析一断
+
+##### jc-91联合行文标识机关时,标在前面的机关是(
+    A.上级机关
+    B.组织序列表中靠前的机关
+    C.主办机关
+    D.其他系统的机关
+
+##### jc-92.为了维护政令一致,凡下行公文
+    A.都要向上级请示
+    B.都要和有关机关协商
+    C.内容涉及其他机关的职权范围时,行文前应与其协商一致
+    D行政主管机关与业务指导机关
+    
+##### jc-93.联合行文时,作者应是()
+    A.同级机关
+    B.同一系统的机关
+    C 三个以上的机关
+    D.都与有关部门联合发文
+    
+##### jc-94.公文的主送机关是指(
+    A.受文机关
+    B.公文的主要受理机关
+    C.公文的所有受理机关
+    D公文的知照和协办机关
+    
+##### jc-95转发上级机关和不相隶属机关的公文、批示转发下级机关的公文、印发本机关的公文,应用()行文。
+    A.命令
+    B.通告
+    C.通知
+    D 指示
+    
+##### jc-96不得抄送给自己的下级机关的公文是(
+    A 公告
+    B 报告
+    C.请示
+    D.纪要
+    
+##### jc-97.某校拟调动某厂某人来校工作,发函应属()
+    A.请求批准函
+    B.商治函
+    C.询问函
+    D.答复函
+    
+##### jc-98联系性公文是()
+    A.下行文
+    B.上行文
+    C.平行文
+    D.上下平均可
+    
+##### jc-99用章条式撰写规章制度类文书,一般()
+    A.总则只设一章,附则也只设一章
+    B.总则设若干章,附则只设一章
+    C.总则设若干章,附则也设若干章
+    D.总则只设一章,附则设若干章
+    
+##### jc-100“以上请予支持为盼”这句结尾语,适用于()
+    A 请示
+    B 报告
+    C.函
+    D.通知
 
 
-##### jc-40
-    A:
-    B:
-    C:
-    D:
 
-##### jc-41
-    A:
-    B:
-    C:
-    D:
 
-##### jc-42
-    A:
-    B:
-    C:
-    D:
 
-##### jc-43
-    A:
-    B:
-    C:
-    D:
 
-##### jc-44
-    A:
-    B:
-    C:
-    D:
 
-##### jc-45
-    A:
-    B:
-    C:
-    D:
 
-##### jc-46
-    A:
-    B:
-    C:
-    D:
 
-##### jc-47
-    A:
-    B:
-    C:
-    D:
 
-##### jc-48
-    A:
-    B:
-    C:
-    D:
 
-##### jc-49
-    A:
-    B:
-    C:
-    D:
 
-##### jc-50
-    A:
-    B:
-    C:
-    D:
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
