--- a/综合基础/金标尺刷题/刷题-大足云阳专项-政治.md
+++ b/综合基础/金标尺刷题/刷题-大足云阳专项-政治.md
@@ -215,9 +215,104 @@
     C:九届三次会议
     D:九届四次会议
 
+##### st1 新民主主义革命时期农村红色政权产生并发展的原因有(ABCD)
+    A中国社会政治、经济发展不平衡
+    B具有良好的群众基础
+    C有相当力量的正式红军的存在
+    D有不断向前发展的全国革命形势
+
+
+##### st2在实现全面建设小康社会的过程中,党和国家长期面临着(ABC)等重大课题。
+    A如何科学判断和全面把握国际形势的发展变化
+    B如何科学判断和全面把握我国将长期处于社会主义初级阶段的基本国情
+    C如何科学判断和全面把握党所处的历史方位和肩负的历史使命
+    D如何进一步巩固党在社会主义建设中的领导地位
+    
+    国际的   我国的   党的     
+    
+##### st3和平与发展的时代主题的内涵包括(BCD)
+    A和平以发展为前提
+    B和平与发展是世界各国人民的共同要求,是当今世界发展的基本趋势
+    C和平与发展揭示了当今世界的主要矛盾和根本任务
+    D和平问题与发展问题相互交织、密不可分
+
+    和平是发展的前提,不是以什么为前提
+
+
+##### st5中国共产党为了抗日民族统一战线的坚持、扩大和巩固,制定了“发展进步势力,争取中间势力,孤立顽固势力”的策略总方针,其中“中间势力”是指(ACD)
+    A民族资产阶级 B.城市小资产阶级 C开明绅士 D地方实力派
+    
+    中间势力包括：即民族资产阶级、开明绅士和地方实力派、爱国华侨、无党派人士和民主人士
+    抗日民族统一战线中的中间势力（开民地）主要是指民族资产阶级、开明绅士和地方实力派。  
+          
+    进步势力(小工农)是指工人、农民和城市小资产阶级。他们是统一战线的基础，抗日的主要依靠力量
+    顽固势力是：蒋介石为代表的亲美派国民党，和指大资产阶级的抗日派
+    
+    开明的，小工农
+
+    
+    四个意识
+    四个自信
+    
+##### st10中国革命的“三个法宝”是()
+    A统一战线
+    B密切联系群众
+    C武装斗争
+    D中国共产党自身的建设
+    三个法宝：ACD 《共产党人发刊词》提出的
+
+
+##### st11.毛泽东思想的科学内涵主要包括(ACD)
+    A马克思列宁主义在中国的运用和发展
+    B毛泽东的思想言论及党的文件
+    C.被实践证明了的关于中国革命和建设的正确的理论原则和经验总结
+    D中国共产党集体智慧的结晶
+    
+    毛泽东的思想言论和党的文件 不属于
+
+##### st12中国共产党的性质是(ABCD)。
+    A中国工人阶级的先锋队
+    B中国人民和中华民族的先锋队
+    C中国特色社会主义事业的领导核心
+    D代表中国先进生产力的发展要求,代表中国先进文化的前进方
+    向,代表中国最广大人民的根本利益
+    
+    一个核心，两个先锋，三个代表
+
+##### st13党的十八大确定了到2020年全面建成小康社会的目标,其中最难实现的就是(ABC)。
+    A农村贫困人口脱贫
+    B贫困县摘帽
+    C消除区域性整体贫困
+    D共同富裕
+    
+    十九大报告，也提到了这些内容
+    最难实现的就是三个贫困的问题
 
 
 
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    
+    
